Update Puset and Kampng Chnag

--- a/កំពង់ឆ្នាំង.html
+++ b/កំពង់ឆ្នាំង.html
@@ -106,11 +106,94 @@
                <!-- Discription of post write here -->
                <p class="text-description"></p>
                <!-- Sub Title it will show Border, Big , and color red -->
-               <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
+               <p class="text-title-readmore">ខេត្តកំពង់ឆ្នាំង</p>
                <!-- Sub Title 1 will show border, Big , color back -->
-               <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
+               <p class="text-description-header">កំពង់ឆ្នាំង ជាខេត្តមួយជាប់មាត់សមុទ្រស្ថិតនៅភាគកណ្តាលនៃប្រទេសកម្ពុជា ហើយជាខេត្តល្បីខាងផលិតក្អមឆ្នាំងមានគុណភាពល្អ អំពីដី។​​ ខេត្តនេះមានទីប្រជុំជនមួយឈ្មោះថា “ក្រុងកំពង់ឆ្នាំង” និងមាននិមិត្តរូបសម្គាល់គឺ “វិមានឯករាជ្យ”​។ 
+                  ខេត្តកំពង់ឆ្នាំង​មានព្រំប្រទល់ ខាងលិចជាប់នឹង ខេត្តពោធិ៍សាត់, ខាងកើតជាប់នឹង ខេត្តកំពង់ចាម, ​ខាងជើងជាប់នឹង ខេត្តកំពង់ធំ និងខាងត្បូងជាប់ខេត្តកំពង់ស្ពឺ។ ហើយខេត្តនេះមានចម្ងាយប្រហែលជាង ~90km ពីរាជធានីភ្នំពេញ បើគិតចាប់ពីវិមានឯករាជ្យ(ខេត្តកំពង់ឆ្នាំង) ទៅវត្តភ្នំ(រាជធានីភ្នំពេញ)។
+                  ជាមូលដ្ឋាន ខេត្តនេះពឹងផ្អែកទៅ​លើ ការផលិតក្អមឆ្នាំងដី ការនេសាទ ការបង្កបង្កើនផល ស្រូវ បន្លែ ផ្លែឈើ និងរោងចក្រកាត់ដេរ ...ល...។
+                  សម្រាប់ផ្នែកទេសចរណ៏វិញ ខេត្តកំពង់ឆ្នាំង ក៏ជាទីតាំងសម្រាប់ភ្ញៀវទេសចរជាតិ និងអន្តរជាតិ ដែលចូលចិត្តសិក្សាស្វែងយល់ពីប្រវត្តិសាស្រ្តផងដែរ។
+                  បើយើងនិយាយអំពីប្រភេទទេសចរណ៏វិញ ខេត្តនេះរួមមាន៖ ទេសចរណ៏បែបធម្មជាតិ និងទេសចរណ៏បែបវប្បធម៌។ យ៉ាងណាមិញទេសចរណ៏បែបវប្បធម៌មានភាពពេញនិយមជាងនៅតំបន់នោះព្រោះខេត្តនេះជាតំបន់ដែលមានប្រវត្តិរឿងព្រេងខ្មែរច្រើន និងមានតំបន់ភ្នំប្រវត្តិសាស្រ្ត។ ក្រៅពីនេះ សម្រាប់ទេសចរណ៏បែបកែច្នៃវិញ ក៏មានរីហ្សតកែច្នៃស្អាតៗជាច្រើន ​សុទ្ធសឹងបង្កើតឡើងដើម្បីបំពេញតម្រូវការលំហែកម្សាន្តសម្រាប់ភ្ញៀវទេសចរទាំងឡាយ។</p>
                <!-- Image post in Discription -->
-               <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
+                <!--ទឹក​ធ្លាក់​ស្រែ​អំពិល-->
+                <p class="text-title-readmore">ទឹក​ធ្លាក់​ស្រែ​អំពិល</p>
+                <!-- Bootstrap Slide View -->
+                <div class="img-content-post">
+                   <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                         <li data-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                         <li data-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                         <li data-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                         <li data-target="#carouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                         <li data-target="#carouselIndicators" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                      </ol>
+                      <div class="carousel-inner">
+                         <div class="carousel-item active">
+                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល 1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                      </button>
+                   </div>
+                   <!-- End Bootstrap Slide View -->
+                </div>
+                <br>
+                <p class="text-description">ទឹកធ្លាក់ស្រែអំពិល ស្ថិតនៅភូមិក្តុល ឃុំក្តុលសែនជ័យ ស្រុក​ទឹកផុស មានចម្ងាយប្រមាណ ៥៨គ.ម ពីក្រុងកំពង់ឆ្នាំង។ ភ្ញៀវ​ទេសចរអាចទៅទស្សនាលំហែកាយ  និងងូតទឹកលេង ជាមួយទឹកធ្លាក់ធម្មជាតិ​ដ៏​សែនត្រជាក់​ ។ ក្រៅពីនោះ ភ្ញៀវទេសចរអាចកម្សាន្ត នៅតំបន់ភ្នំដែលមាន​ទេស​ភាពស្រស់បំព្រង  និងមានដើមឈើតូចធ្វើឲ្យភ្ញៀវទេសចរមកកម្សាន្ត ម្តងហើយ​ម្តងទៀតឥតឈប់ឈរ។ </p>
+                <p class="text-title-readmore">ទឹកជ្រោះ អូរដារ</p>
+                <!-- Bootstrap Slide View -->
+                <div class="img-content-post">
+                   <div id="carouselIndicators1" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                         <li data-target="#carouselIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                         <li data-target="#carouselIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                         <li data-target="#carouselIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                         <li data-target="#carouselIndicators1" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                      </ol>
+                      <div class="carousel-inner">
+                         <div class="carousel-item active">
+                            <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                      </button>
+                   </div>
+                     <!-- End Bootstrap Slide View -->
+                   </div>
+                   <br>
+                  <p class="text-description">ទឹកជ្រោះ អូរដារ ឬក៏គេច្រើនហៅថា ទឹកធ្លាក់ អូរដារ មានទីតាំងស្ថិតនៅ ភូមិថ្នល់ ឃុំដារ ស្រុកកំពង់លែង ខេត្តកំពង់ឆ្នាំង និងមានចម្ងាយប្រហែល ~17km ពីវិមានឯករាជ្យ ខេត្តកំពង់ឆ្នាំង។
+                     ទឹកជ្រោះ អូរដារ ស្ថិតនៅក្នុងប្រភេទ៖ ទឹកជ្រោះឬទឹកធ្លាក់, ទេសចរណ៍ធម្មជាតិ។ រីឯចំណុចសំខាន់ៗនៅ ទឹកជ្រោះ អូរដារ មានដូចជា៖ ហែលទឹកឬលេងទឹក, ពិកនិច, ទស្សនាទេសភាពព្រៃភ្នំ, ដើរលេងថ្មើរជើង និងចំណុចផ្សេងៗទៀត។ </p>
             </div>
          </div>
       </div>
