--- a/ពោធិ៍សាត់.html
+++ b/ពោធិ៍សាត់.html
@@ -144,6 +144,57 @@
                   </div>
                </div>
                <!-- End Bootstrap Slide View -->
+               <br>
+                <p class="text-description">ភ្នំ១៥០០គឺជាទីកន្លែង កំពុងពេញនិយមខ្លាំង នាពេលបច្ចប្បន្ន
+                  ដែលទីនេះ បង្ហាញសម្រស់នៅលើផ្លូវជាតិលេខ ៥៥ ក្នុងស្រុកវាលវែង ខេត្តពោធិ៍សាត់
+                  ដែលត្រូវបានសម្ពោធដាក់ឲ្យប្រើប្រាស់កាលពីថ្ងៃទី០៩ ខែមីនា ឆ្នាំ២០២០ កន្លងទៅ។
+                  ក្រៅពីទេសភាពនៅតាមដងផ្លូវ ស្រស់ស្អាតហើយ នៅទីនោះ យើងឃើញថា មានផ្លូវ កាច់កោង ចុះឡើង
+                  កាត់ភ្នំជាច្រើន ជាមួយនឹងរុក្ខជាតិចម្រុះ គ្រប់ប្រភេទ ទើបទីនោះ អាចទាក់ទាញចិត្ត
+                  មនុស្សគ្រប់ទិសទី ឲ្យមកថតរូបលេងកម្សាន្ត គយគន់ទេសភាពជាច្រើនផងដែរ។ </p>
+                
+              <!-- <p class="text-title-readmore">រមណីយដ្ឋាន ពិកនិក</p> -->
+              <p class="text-title-readmore">ទឹកធ្លាក់ច្រកល្អៀង</p>
+              <!-- Bootstrap Slide View -->
+              <div class="img-content-post">
+                  <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                      <li data-target="#carouselIndicators" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង​1.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង2.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង3.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង4.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                       <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង5.jpg" class="d-block w-100 img-content-post" alt="...">
+                     </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+               </div>
+               <!-- End Bootstrap Slide View -->
+               <br>
+                <p class="text-description">ទឹកធ្លាក់ច្រកល្អៀង ជារមណីយដ្ឋានទេសចរណ៍បែបធម្មជាតិ មានសក្តានុពលទេសចរណ៍សំខាន់ៗដូចជារុក្ខជាតិដើមឈើធំៗ ខ្ពស់ៗ ទឹកធ្លាក់ថ្លាត្រជាក់ ផ្ទាំងថ្មធំៗ ជម្រកសត្វព្រៃ ខ្លា ស្វា ទោច….។ ភ្ញៀវទេសចរអាចសម្រាកលំហែ ងូតទឹក មើលទេសភាព។មានទីតាំងស្ថិតនៅក្នុងភូមិបំណក់ ឃុំឈើតុំ ស្រុកក្រគរ ដែលមានចំងាយប្រមាណជា៧៣គីឡូម៉ែត្រ ពីទីរួមខេត្តពោធិ៍សាត់។</p>
+                
               <!-- <p class="text-title-readmore">រមណីយដ្ឋាន ពិកនិក</p> -->
             </div>
          </div>
