--- a/សៀមរាប.html
+++ b/សៀមរាប.html
@@ -95,17 +95,12 @@
               <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តសៀមរាប</p>
             </div>
           </div>
-            <p class="text-description">ខេត្តសៀមរាបជាខេត្តមួយដែលមានទីតាំងនៅភាគខាងពាយ័ព្យនៃប្រទេសកម្ពុជា ដែលមានទីតាំងស្ថិតនៅក្បែរបឹងទន្លេសាប។</p>
-            <p class="text-description">ទីរួមខេត្តរបស់ខេត្តសៀមរាបនេះគឺ ក្រុងសៀមរាប។ ខេត្តសៀមរាបត្រូវបានដាក់ឈ្មោះបែបនេះដើម្បី រំលឹកដល់ជ័យជំនះនៅកងទ័ពខ្មែរលើកងទ័ពសៀមនៅសម័យលង្វែកសតវត្ស១៦។</p>
-            <p class="text-description">សព្វថ្ងៃខេត្តសៀមរាបត្រូវបានគេស្គាល់ទូទាំងពិភពលោកថាជាខេត្តតាំងនៅនៃប្រាសាទអង្គរវត្តដ៏ល្បីល្បាញ។ ខេត្តសៀមរាបស្ថិតនៅភាគពាយ័ព្យនៃប្រទេសកម្ពុជា។ ខេត្តនេះជាតំបន់ទេសចរណ៍ដ៍សំខាន់របស់ប្រទេសកម្ពុជា ដោយសារខេត្តនេះមានប្រាសាទអង្គរវត្ត ដ៏ល្បីល្បាញ និងប្រាសាទបុរាណដទៃទៀតជាច្រើន។ ថ្មីៗនេះ ក្រុងសៀមរាបកំពុងប្រែក្លាយរូបរាងជាក្រុងទំនើបតាមរយៈកំណើនសណ្ឋាគារ ភោជនីយដ្ឋាន ហាងលក់ទំនិញ ជាដើមដែលបម្រើឱ្យវិស័យទេសចរណ៍។ </p>
-            <p class="text-description">មណីយដ្ឋានផ្សេងទៀតដែលនៅក្បែរក្រុងសៀមរាបមានរាជធានីអង្គរធំ ប្រាសាទអង្គរវត្ត ប្រាសាទបាយ័ន ប្រាសាទភ្នំបាខែង ប្រាសាទបក្សីចាំក្រុង ប្រាសាទបាពួន ប្រាសាទភិមានអាកាស ប្រាសាទបន្ទាយស្រី ប្រាសាទតាព្រហ្ម និងប្រាសាទរាប់រយផ្សេងទៀត។ តំបន់អង្គរត្រូវបានរងការលុកលុយជាច្រើនដងពីពួកសៀម ហើយទីបំផុតរាជធានីអង្គរត្រូវបានបោះបង់នៅឆ្នាំ ១៤៣១។</p>
-            <p class="text-description">គួររំលឹកផងដែរថា រាជធានីរបស់ប្រទេសកម្ពុជាត្រូវបានពីប្តូរពីអង្គរទៅរាជធានីចតុមុខនៅឆ្នាំ ១៤៣២ រួចទៅបន្ទាយលង្វែក និង រាជធានីឧដុង្គ និងត្រលប់ទៅរាជធានីចតុមុខវិញនៅឆ្នាំ ១៨៦៦។ ជនជាតិបទេស ដែលបានមកដល់ប្រាសាទអង្គរវត្តមុនគេគឺអ្នករុករកជនជាតិបារាំង លោក ហង់រី មូហូ (Henri Mouhot)ក្នុងឆ្នាំ១៨៦០។ តំបន់សៀមរាបអង្គរគឺជាគោលដៅចម្បងសម្រាប់ភ្ញៀវទេសចរទូទាំងពិភពលោក ហើយក៏ជាតំបនដែលសម្បូរណ៍ទៅដោយសំណង់ប្រាសាទបុរាណតូចធំជាច្រើន ដែលជាទីស្ថានរបស់ពពួកអាទិទេពទាំងឡាយទាំងពួងផងដែរ។</p>
+            <p class="text-description">ខេត្តសៀមរាបជាខេត្តមួយដែលមានទីតាំងនៅភាគខាងពាយ័ព្យនៃប្រទេសកម្ពុជា ដែលមានទីតាំងស្ថិតនៅក្បែរបឹងទន្លេសាប។ ទីរួមខេត្តរបស់ខេត្តសៀមរាបនេះគឺ ក្រុងសៀមរាប។ ខេត្តសៀមរាបត្រូវបានដាក់ឈ្មោះបែបនេះដើម្បី រំលឹកដល់ជ័យជំនះនៅកងទ័ពខ្មែរលើកងទ័ពសៀមនៅសម័យលង្វែកសតវត្ស១៦។ សព្វថ្ងៃខេត្តសៀមរាបត្រូវបានគេស្គាល់ទូទាំងពិភពលោកថាជាខេត្តតាំងនៅនៃប្រាសាទអង្គរវត្តដ៏ល្បីល្បាញ។ ខេត្តសៀមរាបស្ថិតនៅភាគពាយ័ព្យនៃប្រទេសកម្ពុជា។ ខេត្តនេះជាតំបន់ទេសចរណ៍ដ៍សំខាន់របស់ប្រទេសកម្ពុជា ដោយសារខេត្តនេះមានប្រាសាទអង្គរវត្ត ដ៏ល្បីល្បាញ និងប្រាសាទបុរាណដទៃទៀតជាច្រើន។ ថ្មីៗនេះ ក្រុងសៀមរាបកំពុងប្រែក្លាយរូបរាងជាក្រុងទំនើបតាមរយៈកំណើនសណ្ឋាគារ ភោជនីយដ្ឋាន ហាងលក់ទំនិញ ជាដើមដែលបម្រើឱ្យវិស័យទេសចរណ៍។ រមណីយដ្ឋានផ្សេងទៀតដែលនៅក្បែរក្រុងសៀមរាបមានរាជធានីអង្គរធំ ប្រាសាទអង្គរវត្ត ប្រាសាទបាយ័ន ប្រាសាទភ្នំបាខែង ប្រាសាទបក្សីចាំក្រុង ប្រាសាទបាពួន ប្រាសាទភិមានអាកាស ប្រាសាទបន្ទាយស្រី ប្រាសាទតាព្រហ្ម និងប្រាសាទរាប់រយផ្សេងទៀត។ តំបន់អង្គរត្រូវបានរងការលុកលុយជាច្រើនដងពីពួកសៀម ហើយទីបំផុតរាជធានីអង្គរត្រូវបានបោះបង់នៅឆ្នាំ ១៤៣១។ គួររំលឹកផងដែរថា រាជធានីរបស់ប្រទេសកម្ពុជាត្រូវបានពីប្តូរពីអង្គរទៅរាជធានីចតុមុខនៅឆ្នាំ ១៤៣២ រួចទៅបន្ទាយលង្វែក និង រាជធានីឧដុង្គ និងត្រលប់ទៅរាជធានីចតុមុខវិញនៅឆ្នាំ ១៨៦៦។ ជនជាតិបទេស ដែលបានមកដល់ប្រាសាទអង្គរវត្តមុនគេគឺអ្នករុករកជនជាតិបារាំង លោក ហង់រី មូហូ (Henri Mouhot)ក្នុងឆ្នាំ១៨៦០។ តំបន់សៀមរាបអង្គរគឺជាគោលដៅចម្បងសម្រាប់ភ្ញៀវទេសចរទូទាំងពិភពលោក ហើយក៏ជាតំបនដែលសម្បូរណ៍ទៅដោយសំណង់ប្រាសាទបុរាណតូចធំជាច្រើនដែលជាទីស្ថានរបស់ពពួកអាទិទេពទាំងឡាយទាំងពួងផងដែរ។</p>
             <p class="text-title-readmore">​ខេត្តសៀមរាប</p>
-            <p class="text-description-header">ខេត្តសៀមរាបជាតំបន់ដែលមានប្រាសាទបុរាណ្យជាច្រើន​ សម្រាប់ភ្ញៀវជាតិ និងអន្តរជាតិមកសិក្សារស្រាវជ្រាវអំពីប្រាសាទបុរាណ្យដ៏អស្ចារ្យមួយនេះ។ មិនត្រឺមតែប៉ុណ្ណោះទេតែទាំងមានប្រាសាទជាច្រើនផ្សេងៗទៀតសម្រាប់ការសិក្សារស្រាវជ្រាវ។</p>
             <p class="text-description">ខេត្តសៀមរាបមានទីកន្លែងកំសាន្ដជាច្រើនដូចជា៖</p>
             <p class="text-description">-កាហ្វេ វប្បធម៌ <br> - Angkor Balloon <br> -ប្រាសាទអង្គរវត្ត <br> -ប្រាសាទបាគង <br> -រមនីយ៍ដ្ឋានជាច្រើន <br> -និងប្រាសាទជាច្រើន... ។ </p>
             <p class="text-title-readmore">ទីកន្លែងកំសាន្ដ</p>
-            <p class="text-description"> កាហ្វេ វប្បធម៌​</p>
+            <p class="text-title-readmore">កាហ្វេ វប្បធម៌​</p>
             <!-- Bootstrap Slide View -->
             <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -122,7 +117,7 @@
                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/កាហ្វេ វប្បធម៌4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ផ្ទះ​កាហ្វេ​វប្បធម៌ បាន​តាំង​វត្ថុ​បង្ហាញ​ពី​វប្បធម៌ ក្នុង​គោលដៅ​រួមចំណែក​ផ្សព្វផ្សាយ​ពី​វប្បធម៌​ខ្មែរ​។ វត្ថុ​បុរាណ​ដែលមាន​ក្នុងផ្ទះ​កាហ្វេ​វប្បធម៌​នេះ មាន​អាយុកាល​ចាប់ពី​ជាង​១០០​ឆ្នាំ រហូតដល់​សម័យ​បច្ចុប្បន្ន​។ ​</p>
+              <p class="text-description">កាហ្វេរវប្បធម៌គឺជាកន្លែងមួយដែលស្ថិតនៅក្នុងខេត្តសៀមរាប ដែលហាងកាហ្វេរនេះផ្ដោតសំខាន់ទៅលើការផ្សព្វផ្សាយនិងបង្ហាញឈ្មោះរបស់ខ្មែរ ស្នាដៃរចនាម៉ូតចេញពីគំនិតកូនខ្មែរ ដើម្បីជាការអភិរក្សមរតកដូនតាខ្មែរ។ និងត្រឹមតែប៉ុណ្ណោះទេ មានមុខម្ហូបខ្មែរជាច្រើនធានាតម្លៃសេវាល្អនិងរសជាតិឆ្ញាញ់។ សូម្បីតែកាហ្វេរក៏ផលិតនៅស្រុកខ្មែរ ស្នាដៃកូនកសិករខ្មែរទាំងមូល មានការរួមបញ្ចូលជាតិសាសន៏បន្តិចបន្តួច។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -134,7 +129,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> Angkor Balloon​</p>
+            <p class="text-title-readmore"> Angkor Balloon​</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -151,7 +146,7 @@
                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/Angkor Balloon4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប៉េងប៉ោង​អេលីយ៉ូម​ដែល​ចង​ភ្ជាប់​នៅ​ចម្ងាយ ៨០០ ម៉ែត្រ​ពី​ប្រាសាទ​អង្គរវត្ត។ ប៉េងប៉ោងអេលីយ៉ូមត្រូវបានភ្ជាប់ជាមួយនឹងខ្សែមេកានិចទៅនឹងដី ហើយឡើងដល់កម្ពស់ប្រហែល 120 ម៉ែត្រ (394 ហ្វីត) សម្រាប់ការជិះរយៈពេល 10 នាទី ហើយអាចផ្ទុកអ្នកដំណើរបានរហូតដល់ 20 នាក់។ ចាប់ពីថ្ងៃរះដល់ថ្ងៃលិច រីករាយនឹងទិដ្ឋភាពពីលើអាកាសដ៏អស្ចារ្យនៃប្រាសាទអង្គរវត្ត ភ្នំបាខែង និងបារាយណ៍ខាងលិច។ អ្នកក៏អាចមើលបឹងទន្លេសាប និងភ្នំក្រោមផងដែរ។ ថតរូបដ៏អស្ចារ្យ និងនាំយកការចងចាំមកផ្ទះដែលនៅស្ថិតស្ថេរអស់មួយជីវិត។​</p>
+              <p class="text-description">ជាសេវាកម្មជិះបាឡុងហោះនៅប្រាសាទបាគង ដ៏ល្បីល្បាញនៅទឹកដីខេត្តសៀមរាប បានបិទដំណើរការតាំងពីខែមីនា ២០២០ មកម្ល៉េះ ប៉ុន្តែស្ទើរតែគ្មានអ្នកដឹងទេថា បានបិទទៅហើយ ព្រោះតែវិបត្តិកូវីដ ១៩ បានធ្វើឱ្យធ្លាក់ចុះភ្ញៀវទៅជិះកម្សាន្តយ៉ាងគំហុគ ។ នេះបើតាមការបញ្ជាក់ពីលោកជុន ជាបុគ្គលិកផ្នែកលក់នៅទីនោះ បានប្រាប់មកកាន់ «ប្រជាប្រិយ» ។បាឡុងហោះប្រាសាទបាគង គឺជាការកម្សាន្តមួយបែបដ៏ពិសេសបំផុត តាមរយៈការជិះបាឡុង ដែលអាចហោះហើរដូចយន្តហោះនៅលើផ្ទៃអាកាស ឃើញទេសភាពដ៏ស្រស់ត្រកាលនៃប្រាសាទបាគង និងតំបន់ប្រាសាទជាច្រើនទៀត ព្រមទាំងឃើញនូវសម្រស់ធម្មជាតិបៃតងខ្ចដ៏ត្រជាក់ភ្នែក ។ លក្ខណៈដ៏ពិសេសនៃបាឡុងហោះនេះ គឺដំណើរការដោយកម្ដៅភ្លើង និងមានពីឡុតជាអ្នកបញ្ជាដូចយន្តហោះដូច្នោះដែរ ។បើតាមបុគ្គលិកផ្នែកលក់នៅទីនេះបានបញ្ជាក់ថា ប្រសិនបើជំងឺកូវីដ ១៩ បញ្ចប់ទៅវិញមានសភាពការល្អឡើងវិញ ខាងក្រុមហ៊ុននឹងបើកដំណើរការឡើងវិញនៅឆ្នាំ២០២២ខាងមុខនេះ។​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -163,7 +158,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ប្រាសាទអង្គរវត្ត</p>
+            <p class="text-title-readmore"> ប្រាសាទអង្គរវត្ត</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -180,7 +175,7 @@
                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទអង្គរវត្ត3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទអង្គរវត្ត ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។ ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។ ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២ ដែលជាស្នាដៃដ៏ធំអស្ចារ្យ និងមានឈ្មោះល្បីល្បាញរន្ទឺសុះសាយទៅគ្រប់ទិសទីលើពិភពលោក។ ​</p>
+              <p class="text-description">ប្រាសាទអង្គរវត្ត ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។ ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។ ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២ ដែលជាស្នាដៃដ៏ធំអស្ចារ្យ និងមានឈ្មោះល្បីល្បាញរន្ទឺសុះសាយទៅគ្រប់ទិសទីលើពិភពលោក។ ប្រាសាទនេះសាងសង់ឡើងនៅដើមសតវត្សទី១២ ដែលស្ថិតនៅក្នុងរាជធានី[[យសោធរបុរៈ។ ប្រាសាទអង្គរវត្តជាប្រាសាទកសាងឡើង ដើម្បីឧទ្ទិសដល់ព្រះវិស្ណុ។ ប្រាសាទនេះជាប្រាសាទដែលនៅគង់វង្សល្អបំផុតនៅក្នុងតំបន់អង្គរ។ប្រាសាទអង្គរវត្ត ប្រើកម្លាំងពលកម្មប្រម៉ាណជាង 30មុឺននាក់ និង ដំរី ជាង 6ពាន់ក្បាល និងប្រើប្រាស់ថ្ម សរុបប្រមាណជាង 10លានតោន។នៅក្នុងប្រាសាទមានចម្លាក់អប្សរាយ៉ាងស្អាត ចំណែកឯទីធ្លាខាងក្រៅមានដើមត្នោតរួមទាំងទេសភាពដ៏ស្រស់បំព្រង ហើយនៅជុំវិញប្រាសាទប្រាសាទអង្គរវត្តត្រូវបានរចនាដើម្បីតំណាងភ្នំព្រះសុមេរុ ដែលជាទីលំនៅរបស់អាទិទេព និងទេវតាក្នុងទេវកថាហិណ្ឌូ ដែលមានកសិ្សណ ឬគូទឹកព័ទ្ធជុំវិញប្រហែលជា ១៦គីឡូម៉ែត្រ ចំណែកកសិ្សណពិតប្រាកដរបស់ប្រាសាទ មានបណ្តោយប្រវែង ១៥០០ម៉ែត្រ x ទទឹង១៣០០ម៉ែត្រ លើ២០០ម៉ែត្រ ផ្លូវធំដើរចូលពីទិសខាងលិចទៅដល់ប្រាសាទកណ្តាលមានប្រវែង ២៥០ម៉ែត្រ ឯកំពូលកណ្ដាលខ្ពស់ធំជាងគេបំផុតរបស់នគរវត្ដ មានកម្ពស់ ៦៥ម និងជញ្ជាំងខាងក្រៅវែងគឺជាថែវមានបីជ្រុង ដែលថែវនីមួយៗឡើងខ្ពស់ទៅថែវដែលជាប់គ្នា។ នៅចំកណ្ដាលនៃប្រាសាទបញ្ឈរនូវជួរចតុរង្គនៃប៉ម។ មិនដូចប្រាសាទនៅតំបន់អង្គរភាគច្រើនទេ អង្គរវត្តបែរមុខទៅទិសខាងលិច តាមការស្រាវជ្រាវរបស់អ្នកសិក្សាបានវែកញែកថាជាចំណុចសំខាន់នៃប្រាសាទនេះ។ ប្រាសាទនេះត្រូវបានគេកោតសរសើរដោយសារភាពសម្បើម និងរុងរឿងនៃស្ថាបត្យកម្មនេះ ចម្លាក់ដែលលាតសន្ធឹង និងដោយសារស្ថាបត្យកម្មខ្មែរមានរូបអប្សរា និងទេវតា ដែលឆ្លាក់នៅលើជញ្ជាំងប្រាសាទ។​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -192,7 +187,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ប្រាសាទបាគង្ត</p>
+            <p class="text-title-readmore"> ប្រាសាទបាគង្ត</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators5" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -209,7 +204,7 @@
                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទបាគង4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទបាគងគឺជាឈ្មោះថ្មី ដែលត្រូវបានហៅនៅសម័យកណ្តាល។ ប្រាសាទនេះផ្សំពីពាក្យ ប្រាសាទ+បា+គង។ ប្រាសាទ មានន័យថាទីកន្លែងអាទិទេពគង់នៅ។ បា មានន័យ ថាអ្នកគ្រប់គ្រងលោក អ្នកថែរក្សាលោក។ រីឯពាក្យ គង មានន័យថាគឺជាវត្ថុសម្រាប់បន្លឺសម្លេងឱ្យលាន់លឺរំពងខ្លាំង ហើយត្រូវបានអ្នកមានជំនឿលើអាទិទេព ប្រើប្រាស់ដើម្បីបង្កើតជាសូរសម្លេងដាស់លាន់លឺដល់ពួកអាទិទេពទាំងអស់។ តាមសិលាចារឹកនៃប្រាសាទនេះមានឈ្មោះដើមថា ឥន្ទ្រេស្វរៈ[២]។ ​</p>
+              <p class="text-description">ប្រាសាទបាគងមានទីតាំងស្ថិតនៅក្នុង ភូមិឪឡោក ឃុំបាគង ស្រុកបាគង ខេត្តសៀមរាប និងស្ថិតនៅចំកណ្តាលនៃ រាជធានីហរិហរល័យ ស្ថិតនៅភាគខាងត្បូងនៃប្រាសាទព្រះគោ ហើយត្រូវបានកសាងនៅក្នុងរាជកាលព្រះបាទឥន្រ្ទវរ្ម័នទី១ នៅក្នុងឆ្នាំ៨៨១។ ប្រាសាទនេះត្រូវបានចាត់ទុកជាប្រាសាទរាជ សម្រាប់ឧទ្ទិសដល់ព្រះឥសូរ ហើយក៏ឧទ្ទិសដល់អំណាចរបស់ព្រះរាជផ្ទាល់ផងដែរ ហើយនៅពេលព្រះអង្គយាងចូលទីវង្គត ប្រាសាទនេះត្រូវបានប្រើប្រាស់ជាផ្នូររបស់ព្រះអង្គ។ ដូចប្រាសាទលលៃ ប្រាសាទព្រះគោ និង ប្រាសាទព្រៃមន្ទីរ ប្រាសាទបាគងស្ថិតក្នុងក្រុមរលួស តែ ស្ថិតចំកណ្តាលនៃទីក្រុងអង្គរទី១ ឬហរិហល័យ ដោយមានចម្ងាយប្រមាណជា ១២គ.ម ពីទីរួមខេត្តសៀមរាបបច្ចុប្បន្ន ។ សូមជម្រាប ថា ប្រាសាទអង្គរទាំងនោះ ស្ថិតមិនឆ្ងាយពីគ្នាប៉ុន្មានទេ ពី ១ ទៅ ២,៥គ.ម តែប៉ុណ្ណោះ។ ស្ថិតនៅខាងត្បូងនៃប្រាសាទព្រះគោ នៅក្នុងភូមិបាគង ស្រុកបាគងខេត្តសៀមរាប ប្រសាទបាគងត្រូវបានសាងសង់ឡើង ដោយព្រះបាទឥន្រ្ទវរ្ម័នទី១ នៅឆ្នាំ៨៨១ នៃគ.ស ដើម្បីឧទ្ទិសដល់ព្រះវិស្ណុដ៏មានមហិទ្ធិឫទ្ធិ។ ប្រាសាទបាគងដែលជាប្រាសាទមុនគេ សាងសង់អំពីថ្មភក់ ប្រកបដោយនិម្មាបនកម្មដ៏ល្អប្រណិត ដែលមានឈ្មោះដើមថា ថ្មនៃឥសៈ ហើយតំណាងភ្នំសុមេរុ ព្រោះស្ថិតចំកណ្តាលនៃទីក្រុងហរិហល័យ ។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators5" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
