--- a/កំពត.html
+++ b/កំពត.html
@@ -91,38 +91,38 @@
     <div class="row"> <!--Display flix-->
         <div class="description-1">
           <div class="img-content-wrap">
-            <img class="img-content-post" src="images/Cambodia/ព្រៃវែង.jpg">
+            <img class="img-content-post" src="images/Cambodia//កំពត.jpg">
             <div class="overlay">
               <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកំពត</p>
             </div>
           </div>
-            <p class="text-description">ខេត្តព្រៃវែង ជាខេត្តដែលមានទីតាំងស្ថិតនៅភាគខាងកើតរាជធានីភ្នំពេញ មានព្រំប្រទល់ខាងកើតជាប់ខេត្តស្វាយរៀង និងវៀតណាម ខាងជើងជាប់ខេត្តកំពង់ចាម និងខេត្តត្បូងឃ្មុំ ខាងលិចជាប់ខេត្តកណ្តាល និងខាងត្បូងជាប់វៀតណាម។</p>
-            <p class="text-description">ខេត្តព្រៃវែង មានច្រកអន្តរជាតិចំនួន ៣ កន្លែងគឺ ទី១​ ច្រកអន្តរជាតិម៉ឺនជ័យ (ស្រុកកំចាយមារ) ទី២​ ច្រកអន្តរជាតិបន្ទាយចក្រី (ស្រុកព្រះស្តេច) ទី៣ ច្រកអន្តរជាតិកោះរការ (ស្រុកពាមជរ) នឹងមានផ្ទៃដី​សរុបគឺ ប្រហែល ៤៨៨៣ គម² ដែលស្មើទៅនិង ២,៧០% នៃផ្ទៃដីសរុប​នៃ​</p>
-            <p class="text-description">ប្រទេស​កម្ពុជា (១៨១ ០៣៥ គម²), ដែល​ក្នុងនោះ ៤៤៥,១៨ គម² ឬ ៩,១២% ជាផ្ទៃដី ដែលប្រជាជន បានតាំងទី​លំនៅ, ៣១០០ គម² ឬ ៦៣,៤៩% ជាដី សំរាប់កសិកម្ម, ១៩៤,៦១ គម² ឬ ៣,៩៩% ជាផ្ទៃនៃ​តំបន់ ព្រៃឈើ, ១០៨២,៨៦ គម² ឬ ២២,១៨% ជា​ដី។ </p>
-            <p class="text-description">សាធារណៈ, ហេដ្ឋារចនាសម្ព័ន្ធ និង ធារាសាស្រ្ត, និង នៅសល់ ៦០,៣៥ គម² ឬ១,២៤% ជា ដី មិនត្រូវបានប្រើប្រាស់ ។</p>
+            <p class="text-description">ក្រុង​កំពត គឺជាទីរួមរដ្ឋបាលនៃខេត្តកំពត ត្រូវបានប្តូរឈ្មោះពី ស្រុកកំពង់បាយ តាមអនុក្រឹត្យលេខ​ ២២១ អនក្រ.បក នៅខែតុលា ២០០៨ មានផ្ទៃដីចំនួន៥៤០០ហិចតា។ ក្រុងនេះស្ថិតនៅតាមដងព្រែកទឹកឈូ និងមានចម្ងាយ ៥ គ.មពីឈូងសមុទ្រថៃ។ នៅទីនោះមានកន្លែងកំសាន្តច្រើនណាស់ ដូចជា ការទស្សនាអាគារចាស់ៗ រមណីដ្ខាន ដូចជាភ្នំបូកគោ រមណីយទឹកឈូ វារីអគ្គីសនីភ្នំកំចាយ ឆ្នេរព្រៃក្រុងកំពត និងកន្លែងដែលមានទឹកធ្លាក់ជាច្រើនក្នុងក្រុងកំពត។
+              សាលាខេត្តកំពតបានរៀបចំហេដ្ឋារចនាសម្ព័ន្ធជាច្រើន ដើម្បីទាក់ទាញភ្ញៀវទេសចរដើម្បី​​​​​​​​ ជាប្រយោជន៏ដល់ប្រជាជនដែលរស់នៅ ក្នុងក្រុងកំពតមានការងារធ្វើច្រើន និងមានជីវភាពធូរធារស្របតាមយុត្តិសាស្រ្ត របស់រាជរដ្ឋាភិបាលបច្ចុប្បន្ន។
+              ម៉្យាងទៀតកំពតក៏ជា ក្រុងមួយដែលមានសក្កានុពលផ្នែកសេដ្ឋកិច្ចផងដែរ ព្រោះវាជាក្រុងដែលស្ថិតនៅជិតសមុទ្រ ដូច្នេះទើបក្រុងនេះមានប្រជាជនកុះករដោយសារភាពងាយស្រួលក្នុងការរស់ នៅ​​​ និងការប្រកបរបរចិញ្ចឹមជីវិតមានដូចជា នេសាទត្រី ធ្វើស្រែចំការ ចិញ្ចឹមសត្វ ចិញ្ចឹមត្រី ដាំបន្លែ កម្មករសំណង់ ធ្វើឡួរ​ ធ្វើការរដ្ឋ និងមានការងារច្រើនផ្សេងពីនេះថែមទៀត។
+              បច្ចុប្បន្ននេះ ប្រជាពលរដ្ឋរស់នៅក្នុងខេត្តកំពត មានក្តីរីករាយ ព្រោះទំនប់វារីអគ្គីសនី ដែលនៅលើភ្នំកំចាយ បានបើកដំនើរការទំនប់វារីអគ្គីសនីនេះ និង អាចជូយសន្សំថវិការរបស់ប្រជាជនបានមួយចំណែកផងដែរ ដោយវាមានតំលៃថោកជាងមុនបន្តិច។ នៅថ្ងៃអនាគតទំនប់នេះ នឹងក្លាយជាកន្លែងទេសចរណ៍ ដែលមានសម្រស់ស្រស់ស្អាត ហើយជាទំនប់ទឹកដ៏ធំដែលស្ថិតនៅ កណ្ដាលជន្លោងភ្នំ ដែលអាចនឹងទាញភ្ញៀវទេសចរជាតិ និងអន្តរជាតិបានរហូតដល់រាប់រយនាក់ឬ ច្រើនជាងនេះ ពីព្រោះទំនប់នេះមានសម្រស់ស្រស់ត្រកាល ដោយសារព្រៃព្រឹក្សាអ្នកតាវល្លឹកពណ៌ខៀវស្រងាត់ បើនិយាយពីកម្ពស់វិញ គឺវាមានលក្ខណខ្ពស់ធំត្រដាតផុតកន្ទុយភ្នែក គឺ ១០០ ម ពីផ្ទៃក្រោមទៅផ្ទៃលើ ហើយទទឹងវិញមានប្រវែងរាប់រយម៉ែត បើសិន​មើលឡើងទៅគួរអោយរន្ធត់ ហើយមិនត្រឹមតែប៉ុណ្តោះនៅមានទិដ្ឋភាពជាច្រើនទៀតដូចជាៈ ការថតរូបអំពីទំនប់ ការរូងភ្នំ ការថតហ្វូងសត្វ ការទេសភាពភ្នំព្រៃព្រឹក្សាអ្នកតាវល្លឹ ហើយនិងការស្ទូងត្រីលេងកំសាន្តជាដើម។
+              បើសិនជាអ្នកចុះមកក្រោមប្រហែល ១​ គមមានកន្លែងមួយ ដែលគេអោយឈ្មោះថា រមណីយដ្ឋានទឹកឈូ នៅមិនឆ្ងាយប៉ុន្មានពីទំនប់វារីអគ្គីសនី ហើយមនុស្សដែលរស់តំបន់នោះភាគច្រើនជាអ្នកធ្វើចំការ លក់ម្ហូបអាហារក្នុងរមណីយដ្ឋាន និងអាចកាប់ឈើនៅលើភ្នំ នាំអោយប្រជាជននៅមានជីវភាពធូធារគួរសម។</p>
             <p class="text-title-readmore">​ខេត្តកំពត</p>
-            <p class="text-description-header">ខេត្ត​ព្រៃវែង​មាន​​តំបន់​​​ទេសចរណ៍​វប្បធម៌​ តំបន់​ទេសចរណ៍​ធម្មជាតិ និង តំបន់​ទេសចរណ៍​​កែច្នៃ មួយ​ចំនួន​ដែល​អាច​ទាក់ទាញ​ភ្ញៀវ​ក្នុង​ស្រុក ភ្ញៀវ​មក​ពី​ខេត្ត​ក្រុង​ផ្សេងៗ​ និង ភ្ញៀវ​​ទេសចរណ៍​បរទេស ។</p>
             <p class="text-description-header">ខាង​ក្រោម​នេះ​គឺ​ជា​តំបន់​ទេសចរណ៍ដែល​​​ទេសចរ​​ជាតិ​ និង ​អន្តរជាតិ​​អាច​មក​​​ទស្សនា​​កំសាន្តបាន​ ៖។</p>
-            <p class="text-description">-ចុងប៉ម <br> -ភ្នំឈើកាច់ <br> -បឹងស្នេហ៍ <br> -ប្រាសាទចុងស្រុក <br> -រមនីយ៍ដ្ឋានជាច្រើន... ។ </p>
+            <p class="text-description">-រមណីយ៍ដ្ឋានភ្នំបូកគោ <br> -ព្រែកត្នោត <br> -ដូងទេរ<br> -ទឹកធ្លាក់តាដា <br> -រមនីយ៍ដ្ឋានជាច្រើន... ។ </p>
             <p class="text-title-readmore">ទីកន្លែងកំសាន្ដ</p>
-            <p class="text-description">រមណីយដ្ឋានភ្នំបូកគោ</p>
+            <p class="text-title-readmore">រមណីយដ្ឋានភ្នំបូកគោ</p>
             <!-- Bootstrap Slide View -->
             <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុង​ប៉ម1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/រមណីយដ្ឋានភ្នំបូកគោ.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុងប៉ម2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/រមណីយដ្ឋានភ្នំបូកគោ2.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុងប៉ម3.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/រមណីយដ្ឋានភ្នំបូកគោ3.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុងប៉ម4.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/កន្លែងកំសាន្ដ/កំពត/រមណីយដ្ឋានភ្នំបូកគោ4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ផ្ទះ​កាហ្វេ​វប្បធម៌ បាន​តាំង​វត្ថុ​បង្ហាញ​ពី​វប្បធម៌ ក្នុង​គោលដៅ​រួមចំណែក​ផ្សព្វផ្សាយ​ពី​វប្បធម៌​ខ្មែរ​។ វត្ថុ​បុរាណ​ដែលមាន​ក្នុងផ្ទះ​កាហ្វេ​វប្បធម៌​នេះ មាន​អាយុកាល​ចាប់ពី​ជាង​១០០​ឆ្នាំ រហូតដល់​សម័យ​បច្ចុប្បន្ន​។ ​</p>
+              <p class="text-description">ភ្នំបូកគោនេះមានចំងាយពីក្រុង កំពត ៤២គ.ម រហូតដល់កំពូលភ្នំ។ កាលដំបូងឡើយ បូកគោគឺជាទីកន្លែងសំរាប់លំហែកាយ ក្នុងការផ្លាស់ប្តូរអាកាសធាតុ នៃតំបន់វាលរាបទៅតំបន់កំពូលភ្នំនាឆ្នេរសមុទ្រ។ ស្ថិតនៅលើកំពូលភ្នំដែលមានកំពស់ ១០៧៥ ម៉ែត្រ អាកាសធាតុនៅទីនោះមានភាពត្រជាក់បង្គួរ រុក្ខជាតិទាំងឡាយមានភាពរីកស្រស់គ្រប់ពេលវេលាព្រមទាំងមាន ទេសភាពធម្មជាតិដ៏ល្អៗ ដូចចជាផ្ទាំងថ្មធំៗជាច្រើនឥតគណនា នៅរាយប៉ាយក្រោមដើមរុក្ខជាតិ ខ្លះទៀតនៅ កណ្តាលវាល ខ្លះទៀតដូចជារូបសត្វផ្សេងៗ មានរាងជាសំពៅ។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -134,24 +134,24 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ព្រែកត្នោត​</p>
+            <p class="text-title-readmore"> ព្រែកត្នោត​</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ព្រែកត្នោត.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ព្រែកត្នោត1.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ព្រែកត្នោត2.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់3.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/កន្លែងកំសាន្ដ/កំពត/ព្រែកត្នោត3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប៉េងប៉ោង​អេលីយ៉ូម​ដែល​ចង​ភ្ជាប់​នៅ​ចម្ងាយ ៨០០ ម៉ែត្រ​ពី​ប្រាសាទ​អង្គរវត្ត។ ប៉េងប៉ោងអេលីយ៉ូមត្រូវបានភ្ជាប់ជាមួយនឹងខ្សែមេកានិចទៅនឹងដី ហើយឡើងដល់កម្ពស់ប្រហែល 120 ម៉ែត្រ (394 ហ្វីត) សម្រាប់ការជិះរយៈពេល 10 នាទី ហើយអាចផ្ទុកអ្នកដំណើរបានរហូតដល់ 20 នាក់។ ចាប់ពីថ្ងៃរះដល់ថ្ងៃលិច រីករាយនឹងទិដ្ឋភាពពីលើអាកាសដ៏អស្ចារ្យនៃប្រាសាទអង្គរវត្ត ភ្នំបាខែង និងបារាយណ៍ខាងលិច។ អ្នកក៏អាចមើលបឹងទន្លេសាប និងភ្នំក្រោមផងដែរ។ ថតរូបដ៏អស្ចារ្យ និងនាំយកការចងចាំមកផ្ទះដែលនៅស្ថិតស្ថេរអស់មួយជីវិត។​</p>
+              <p class="text-description">រមណីយដ្ឋានព្រែកត្នោតមានទីតាំងស្ថិតក្នុង ឃុំព្រែកត្នោត ស្រុកទឹកឈូ ខេត្តកំពត។ នៅតំបន់នោះមានទឹកជ្រោះ ជាច្រើនកន្លែងដែលហូរចុះពីភ្នំបូកគោទៅទម្លាក់ក្នុងផ្ទៃសមុទ្រ ទើបធ្វើឱ្យទីនេះ ក្លាយទៅជាកន្លែងពេញនិយមរបស់ មន្ត្រីនានានៅខេត្តកំពត និង អ្នកទេសចរនៅ ខេត្តកំពតក៏ដូចជាទេសចរបរទេស បានចាត់ទុកថារមណីយដ្ឋាន ព្រែកត្នោតប្រៀប ប្រដូចថាជាទឹកឈូថ្មី។​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -163,24 +163,24 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ដូងទេរ</p>
+            <p class="text-title-readmore"> ដូងទេរ</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ដូងទេរ.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ដូងទេរ1.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ដូងទេរ2.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍4.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/កន្លែងកំសាន្ដ/កំពត/ដូងទេរ3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទអង្គរវត្ត ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។ ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។ ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២ ដែលជាស្នាដៃដ៏ធំអស្ចារ្យ និងមានឈ្មោះល្បីល្បាញរន្ទឺសុះសាយទៅគ្រប់ទិសទីលើពិភពលោក។ ​</p>
+              <p class="text-description">រមណីយដ្ឋានដូង ទេរ ជារមណីយដ្ឋានមួយស្ថិតលើដងព្រែកទឹកឈូ ចម្ងាយប្រមាណ ៧គីឡូម៉ែត្រ ពីស្ពានកំពតថ្មីប្រមាណ ១០-១៥នាទី។នៅទីនោះ មានដូងទេរយ៉ាងស្រស់ស្អាតលយចូលទៅទឹកបឹងបង្អួតសម្រស់យ៉ាងត្រកាល។ ទេសភាពឆ្នេរមាត់ព្រែកដ៍ស្រស់ស្អាត សម្រាកលំហែកាយ ហែលទឹកកម្សាន្ត ទទួលទានអាហារឆ្ងាញ់ៗ មិនតែប៉ុណ្ណោះ ភ្ញៀវទេសចរអាចរកជិះក្ដាររំអិលកោងខ្ពស់ និងជិះទូកកាយ៉ាក់ ដោយចំណាយប្រាក់ប្រមាណ ៣ដុល្លារម្នាក់ ។រមណីយដ្ឋានដូងទេរ នេះស្ថិតនៅក្នុងភូមិស្នំប្រាំពីរ ឃុំម៉ាក់ប្រាង្គ ស្រុកទឹកឈូ ខេត្តកំពត គឺនៅជាប់នឹងព្រែកកំពត។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -192,24 +192,24 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description">ទឹកធ្លាក់តាដា</p>
+            <p class="text-title-readmore">ទឹកធ្លាក់តាដា</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators5" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ទឹកធ្លាក់តាដា.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ទឹកធ្លាក់តាដា1.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/កំពត/ទឹកធ្លាក់តាដា2.jpg "class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក3.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/កន្លែងកំសាន្ដ/កំពត/ទឹកធ្លាក់តាដា3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទបាគងគឺជាឈ្មោះថ្មី ដែលត្រូវបានហៅនៅសម័យកណ្តាល។ ប្រាសាទនេះផ្សំពីពាក្យ ប្រាសាទ+បា+គង។ ប្រាសាទ មានន័យថាទីកន្លែងអាទិទេពគង់នៅ។ បា មានន័យ ថាអ្នកគ្រប់គ្រងលោក អ្នកថែរក្សាលោក។ រីឯពាក្យ គង មានន័យថាគឺជាវត្ថុសម្រាប់បន្លឺសម្លេងឱ្យលាន់លឺរំពងខ្លាំង ហើយត្រូវបានអ្នកមានជំនឿលើអាទិទេព ប្រើប្រាស់ដើម្បីបង្កើតជាសូរសម្លេងដាស់លាន់លឺដល់ពួកអាទិទេពទាំងអស់។ តាមសិលាចារឹកនៃប្រាសាទនេះមានឈ្មោះដើមថា ឥន្ទ្រេស្វរៈ[២]។ ​</p>
+              <p class="text-description">រមណីយដ្ឋានទឹកធ្លាក់តាដាមានឈ្មោះពេញ ”ទឹកធ្លាក់តាដាសច្ចំ” ស្ថិតក្នុងឃុំស្នំប្រាំពីរ ស្រុកទឹកឈូ ខេត្តកំពត បានបង្កើតឡើងកាលពីឆ្នាំ ២០១៤ និងត្រូវបានរៀបចំអភិវឌ្ឍឡើងដោយឯកឧត្តមបណ្ឌិតទេសរដ្ឋមន្ត្រី ញឹម វណ្ណដា និងលោកជំទាវ។ រមណីយដ្ឋាននេះគឺជាតំបន់ទឹកធ្លាក់ពីធម្មជាតិ កំពស់២៧ម៉ែត្រ មានល្បាក់ថ្មភ្នំ៣ជាន់ ក្នុងល្បាក់ថ្មនីមួយៗមានបណ្តោយ ៤២ម៉ែត្រ និងទទឹង ៣៥ម៉ែត្រ ហូរធ្លាក់ចុះមកកាន់ព្រែកកំពង់បាយ។ ភ្ញៀវទេសចរសរសើមិនដាច់ពីមាត់បន្ទាប់ពីបានមករមណីយដ្ឋានដែលមានទឹកធ្លាក់ដ៏ត្រជាក់ ព្រមទាំងមានទេសភាពគួអោយទាក់ទាញ និងប្រាថ្នាចង់មកលេងម្តងទៀតនៅពេលក្រោយ។  ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators5" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
