--- a/ព្រៃវែង.html
+++ b/ព្រៃវែង.html
@@ -96,16 +96,12 @@
               <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តព្រៃវែង</p>
             </div>
           </div>
-            <p class="text-description">ខេត្តព្រៃវែង ជាខេត្តដែលមានទីតាំងស្ថិតនៅភាគខាងកើតរាជធានីភ្នំពេញ មានព្រំប្រទល់ខាងកើតជាប់ខេត្តស្វាយរៀង និងវៀតណាម ខាងជើងជាប់ខេត្តកំពង់ចាម និងខេត្តត្បូងឃ្មុំ ខាងលិចជាប់ខេត្តកណ្តាល និងខាងត្បូងជាប់វៀតណាម។</p>
-            <p class="text-description">ខេត្តព្រៃវែង មានច្រកអន្តរជាតិចំនួន ៣ កន្លែងគឺ ទី១​ ច្រកអន្តរជាតិម៉ឺនជ័យ (ស្រុកកំចាយមារ) ទី២​ ច្រកអន្តរជាតិបន្ទាយចក្រី (ស្រុកព្រះស្តេច) ទី៣ ច្រកអន្តរជាតិកោះរការ (ស្រុកពាមជរ) នឹងមានផ្ទៃដី​សរុបគឺ ប្រហែល ៤៨៨៣ គម² ដែលស្មើទៅនិង ២,៧០% នៃផ្ទៃដីសរុប​នៃ​</p>
-            <p class="text-description">ប្រទេស​កម្ពុជា (១៨១ ០៣៥ គម²), ដែល​ក្នុងនោះ ៤៤៥,១៨ គម² ឬ ៩,១២% ជាផ្ទៃដី ដែលប្រជាជន បានតាំងទី​លំនៅ, ៣១០០ គម² ឬ ៦៣,៤៩% ជាដី សំរាប់កសិកម្ម, ១៩៤,៦១ គម² ឬ ៣,៩៩% ជាផ្ទៃនៃ​តំបន់ ព្រៃឈើ, ១០៨២,៨៦ គម² ឬ ២២,១៨% ជា​ដី។ </p>
-            <p class="text-description">សាធារណៈ, ហេដ្ឋារចនាសម្ព័ន្ធ និង ធារាសាស្រ្ត, និង នៅសល់ ៦០,៣៥ គម² ឬ១,២៤% ជា ដី មិនត្រូវបានប្រើប្រាស់ ។</p>
+            <p class="text-description">ខេត្តព្រៃវែង ជាខេត្តដែលមានទីតាំងស្ថិតនៅភាគខាងកើតរាជធានីភ្នំពេញ មានព្រំប្រទល់ខាងកើតជាប់ខេត្តស្វាយរៀង និងវៀតណាម ខាងជើងជាប់ខេត្តកំពង់ចាម និងខេត្តត្បូងឃ្មុំ ខាងលិចជាប់ខេត្តកណ្តាល និងខាងត្បូងជាប់វៀតណាម។ ខេត្តព្រៃវែង មានច្រកអន្តរជាតិចំនួន ៣ កន្លែងគឺ ទី១ ច្រកអន្តរជាតិម៉ឺនជ័យ (ស្រុកកំចាយមារ) ទី២ ច្រកអន្តរជាតិបន្ទាយចក្រី (ស្រុកព្រះស្តេច) ទី៣ ច្រកអន្តរជាតិកោះរការ (ស្រុកពាមជរ) នឹងមានផ្ទៃដីសរុបគឺ ប្រហែល ៤៨៨៣ គម² ដែលស្មើទៅនិង ២,៧០% នៃផ្ទៃដីសរុបនៃប្រទេសកម្ពុជា (១៨១ ០៣៥ គម²), ដែលក្នុងនោះ ៤៤៥,១៨ គម² ឬ ៩,១២% ជាផ្ទៃដី ដែលប្រជាជន បានតាំងទីលំនៅ, ៣១០០ គម² ឬ ៦៣,៤៩% ជាដី សំរាប់កសិកម្ម, ១៩៤,៦១ គម² ឬ ៣,៩៩% ជាផ្ទៃនៃតំបន់ ព្រៃឈើ, ១០៨២,៨៦ គម² ឬ ២២,១៨% ជាដី សាធារណៈ, ហេដ្ឋារចនាសម្ព័ន្ធ និង ធារាសាស្រ្ត, និង នៅសល់ ៦០,៣៥ គម² ឬ១,២៤%ជាដីមិនត្រូវបានប្រើប្រាស់។</p>
             <p class="text-title-readmore">​ខេត្តព្រៃវែង</p>
-            <p class="text-description-header">ខេត្ត​ព្រៃវែង​មាន​​តំបន់​​​ទេសចរណ៍​វប្បធម៌​ តំបន់​ទេសចរណ៍​ធម្មជាតិ និង តំបន់​ទេសចរណ៍​​កែច្នៃ មួយ​ចំនួន​ដែល​អាច​ទាក់ទាញ​ភ្ញៀវ​ក្នុង​ស្រុក ភ្ញៀវ​មក​ពី​ខេត្ត​ក្រុង​ផ្សេងៗ​ និង ភ្ញៀវ​​ទេសចរណ៍​បរទេស ។</p>
             <p class="text-description-header">ខាង​ក្រោម​នេះ​គឺ​ជា​តំបន់​ទេសចរណ៍ដែល​​​ទេសចរ​​ជាតិ​ និង ​អន្តរជាតិ​​អាច​មក​​​ទស្សនា​​កំសាន្តបាន​ ៖។</p>
             <p class="text-description">-ចុងប៉ម <br> -ភ្នំឈើកាច់ <br> -បឹងស្នេហ៍ <br> -ប្រាសាទចុងស្រុក <br> -រមនីយ៍ដ្ឋានជាច្រើន... ។ </p>
             <p class="text-title-readmore">ទីកន្លែងកំសាន្ដ</p>
-            <p class="text-description"> ចុងប៉ម</p>
+            <p class="text-title-readmore">ចុងប៉ម</p>
             <!-- Bootstrap Slide View -->
             <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -122,7 +118,7 @@
                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុងប៉ម4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ផ្ទះ​កាហ្វេ​វប្បធម៌ បាន​តាំង​វត្ថុ​បង្ហាញ​ពី​វប្បធម៌ ក្នុង​គោលដៅ​រួមចំណែក​ផ្សព្វផ្សាយ​ពី​វប្បធម៌​ខ្មែរ​។ វត្ថុ​បុរាណ​ដែលមាន​ក្នុងផ្ទះ​កាហ្វេ​វប្បធម៌​នេះ មាន​អាយុកាល​ចាប់ពី​ជាង​១០០​ឆ្នាំ រហូតដល់​សម័យ​បច្ចុប្បន្ន​។ ​</p>
+              <p class="text-description">ក្រុងព្រៃវែង ត្បិតខ្សត់កន្លែងកម្សាន្តមែន តែមានកន្លែងមួយដែលមើលថ្ងៃលិចស្អាតបំផុត បើបានឃើញហើយដឹងតែជាប់ចិត្តស្ទើរដកមិនរួច។ នោះគ្មានអីក្រៅពី ចុងប៉ម ល្បីប្រចាំក្រុងព្រៃវែងនោះឡើយ។អមដោយទេសភាពថ្ងៃលិចនារដូវទឹកឡើងដែលមិនចាញ់ភ្នំក្រោម និងភ្នំបាខែង ខេត្តសៀមរាប នោះ អ្នកក្រុងព្រៃវែង ទាំងសិស្ស ទាំងអ្នកធម្មតា តែងមកទីនេះស្រូបយកខ្យល់បរិសុទ្ធនៃក្លិនទឹកទន្លេ ត្រជាក់ស្វាងអស់ខួរក្បាល។ ឯខែប្រាំងវិញ គេនៅតែស្រូបខ្យល់បរិសុទ្ធត្រជាក់ តែអមដោយទេសភាពវាលស្រែប្រាំងវិញម្ដង ជំនួសលើផ្ទៃទឹកនាខែវស្សា។	 ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -134,7 +130,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ភ្នំឈើកាច់​</p>
+            <p class="text-title-readmore"> ភ្នំឈើកាច់​</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -151,7 +147,7 @@
                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប៉េងប៉ោង​អេលីយ៉ូម​ដែល​ចង​ភ្ជាប់​នៅ​ចម្ងាយ ៨០០ ម៉ែត្រ​ពី​ប្រាសាទ​អង្គរវត្ត។ ប៉េងប៉ោងអេលីយ៉ូមត្រូវបានភ្ជាប់ជាមួយនឹងខ្សែមេកានិចទៅនឹងដី ហើយឡើងដល់កម្ពស់ប្រហែល 120 ម៉ែត្រ (394 ហ្វីត) សម្រាប់ការជិះរយៈពេល 10 នាទី ហើយអាចផ្ទុកអ្នកដំណើរបានរហូតដល់ 20 នាក់។ ចាប់ពីថ្ងៃរះដល់ថ្ងៃលិច រីករាយនឹងទិដ្ឋភាពពីលើអាកាសដ៏អស្ចារ្យនៃប្រាសាទអង្គរវត្ត ភ្នំបាខែង និងបារាយណ៍ខាងលិច។ អ្នកក៏អាចមើលបឹងទន្លេសាប និងភ្នំក្រោមផងដែរ។ ថតរូបដ៏អស្ចារ្យ និងនាំយកការចងចាំមកផ្ទះដែលនៅស្ថិតស្ថេរអស់មួយជីវិត។​</p>
+              <p class="text-description">រមណីយដ្ឋាននគរភ្នំ ឬរមណីយដ្ឋានភ្នំឈើកាច់ ជារមណីយដ្ឋានបែបប្រវត្ដិសាស្រ្ដដែលស្ថិតនៅលើភ្នំឈើកាច់ដោយមានកាំជណ្តើរឡើងដល់កំពូលភ្នំ។ រមណីយដ្ឋាននេះ ជាកន្លែងស័ក្កសិទ្ធិមួយក្នុងខេត្ដព្រៃវែង ដែលមានអ្នកមកគោរពបូជាជាច្រើន និងជាកន្លែងសម្រាប់ប្រារព្ធពិធីសាសនាផ្សេងៗ។ ជារៀងរាល់ឆ្នាំរមណីយដ្ឋាននេះតែងតែប្រារព្ធពិធីឡើងអ្នកតា (អ្នកតាមេសរ) ដែលប្រព្រឹត្ដរយៈពេលបីថ្ងៃ ដើម្បីរំលឹកគុណដល់បុព្វបុរស សុំសេចក្តីសុខ សុំទឹកភ្លៀងនិងការពារប្រជាពលរដ្ឋទាំងអស់នៅក្នុងភូមិឱ្យមានសេចក្តីសុខ។ ភ្ញៀវទេសចរអាចទៅកម្សាន្ដ ទស្សនាទេសភាពពីលើកំពូលភ្នំ ទស្សនាវាលស្រែខៀវស្រងាត់ដាច់កន្ទុយភ្នែកផងដែរ។​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -163,7 +159,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> បឹងស្នេហ៍</p>
+            <p class="text-title-readmore"> បឹងស្នេហ៍</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -180,7 +176,7 @@
                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទអង្គរវត្ត ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។ ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។ ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២ ដែលជាស្នាដៃដ៏ធំអស្ចារ្យ និងមានឈ្មោះល្បីល្បាញរន្ទឺសុះសាយទៅគ្រប់ទិសទីលើពិភពលោក។ ​</p>
+              <p class="text-description">តំបន់អភិរក្សបឹងស្នេហ៍ គឺជាតំបន់អភិរក្សធម្មជាតិទំហំជាង៧០ហិកតា ស្ថិតនៅលើទីទួលពាន់កាឡី ក្នុងភូមិបឹងស្នេហ៍ ឃុំធាយ ស្រុកបាភ្នំ ខេត្តព្រៃវែង ។ តំបន់អភិរក្សនោះក្រៅពីមានផ្ទៃបឹងដ៏ធំ ក៏មានទីទួល ព្រៃរបោះ និងព្រៃលិចទឹក ជាពិសេសពពួកសត្វស្លាបច្រើនប្រភេទចំនួនរាប់ពាន់ក្បាលរស់នៅ។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -192,7 +188,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ប្រាសាទចុងស្រុក</p>
+            <p class="text-title-readmore"> ប្រាសាទចុងស្រុក</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators5" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -209,7 +205,7 @@
                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទបាគងគឺជាឈ្មោះថ្មី ដែលត្រូវបានហៅនៅសម័យកណ្តាល។ ប្រាសាទនេះផ្សំពីពាក្យ ប្រាសាទ+បា+គង។ ប្រាសាទ មានន័យថាទីកន្លែងអាទិទេពគង់នៅ។ បា មានន័យ ថាអ្នកគ្រប់គ្រងលោក អ្នកថែរក្សាលោក។ រីឯពាក្យ គង មានន័យថាគឺជាវត្ថុសម្រាប់បន្លឺសម្លេងឱ្យលាន់លឺរំពងខ្លាំង ហើយត្រូវបានអ្នកមានជំនឿលើអាទិទេព ប្រើប្រាស់ដើម្បីបង្កើតជាសូរសម្លេងដាស់លាន់លឺដល់ពួកអាទិទេពទាំងអស់។ តាមសិលាចារឹកនៃប្រាសាទនេះមានឈ្មោះដើមថា ឥន្ទ្រេស្វរៈ[២]។ ​</p>
+              <p class="text-description">ប្រាសាទចុងស្រុកខេត្តព្រៃវែងបង្កប់រឿងរ៉ាវចម្លែកច្រើន តែមិនសូវមានអ្នកស្គាល់ប្រាសាទចុងស្រុក! នេះ(អ្នកស្រុកហៅថាព្រៃដើមស្រុក ឬប្រធាតុ) ស្ថិតនៅភូមិបឹងជ័រ ឃុំព្រៃទឹង ស្រុកស៊ីធរកណ្ដាល ខេត្តព្រៃវែង។ ប្រាសាទដ៏ចំណាស់មួយនេះ ធ្លាប់មានរឿងរ៉ាវចម្លែកជាច្រើនកើតឡើង ប៉ុន្តែមិនសូវមានអ្នកបានដឹង បានស្គាល់ឡើយ ហើយបច្ចុប្បន្នកំពុងស្ថិតក្នុងសភាពស្ងាត់ជ្រងំសម្រាប់ថ្ងៃធម្មតា និងមានមនុស្សមួយចំនួនតូចបានទៅលេងនៅថ្ងៃសៅរ៍ ថ្ងៃអាទិត្យ។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators5" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
