--- a/ភ្នំពេញ.html
+++ b/ភ្នំពេញ.html
@@ -96,16 +96,16 @@
               <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងរាជធានីភ្នំពេញ</p>
             </div>
           </div>
-            <p class="text-description">ខេត្តព្រៃវែង ជាខេត្តដែលមានទីតាំងស្ថិតនៅភាគខាងកើតរាជធានីភ្នំពេញ មានព្រំប្រទល់ខាងកើតជាប់ខេត្តស្វាយរៀង និងវៀតណាម ខាងជើងជាប់ខេត្តកំពង់ចាម និងខេត្តត្បូងឃ្មុំ ខាងលិចជាប់ខេត្តកណ្តាល និងខាងត្បូងជាប់វៀតណាម។</p>
-            <p class="text-description">ខេត្តព្រៃវែង មានច្រកអន្តរជាតិចំនួន ៣ កន្លែងគឺ ទី១​ ច្រកអន្តរជាតិម៉ឺនជ័យ (ស្រុកកំចាយមារ) ទី២​ ច្រកអន្តរជាតិបន្ទាយចក្រី (ស្រុកព្រះស្តេច) ទី៣ ច្រកអន្តរជាតិកោះរការ (ស្រុកពាមជរ) នឹងមានផ្ទៃដី​សរុបគឺ ប្រហែល ៤៨៨៣ គម² ដែលស្មើទៅនិង ២,៧០% នៃផ្ទៃដីសរុប​នៃ​</p>
-            <p class="text-description">ប្រទេស​កម្ពុជា (១៨១ ០៣៥ គម²), ដែល​ក្នុងនោះ ៤៤៥,១៨ គម² ឬ ៩,១២% ជាផ្ទៃដី ដែលប្រជាជន បានតាំងទី​លំនៅ, ៣១០០ គម² ឬ ៦៣,៤៩% ជាដី សំរាប់កសិកម្ម, ១៩៤,៦១ គម² ឬ ៣,៩៩% ជាផ្ទៃនៃ​តំបន់ ព្រៃឈើ, ១០៨២,៨៦ គម² ឬ ២២,១៨% ជា​ដី។ </p>
-            <p class="text-description">សាធារណៈ, ហេដ្ឋារចនាសម្ព័ន្ធ និង ធារាសាស្រ្ត, និង នៅសល់ ៦០,៣៥ គម² ឬ១,២៤% ជា ដី មិនត្រូវបានប្រើប្រាស់ ។</p>
-            <p class="text-title-readmore">​ខេត្តព្រៃវែង</p>
-            <p class="text-description-header">ខេត្ត​ព្រៃវែង​មាន​​តំបន់​​​ទេសចរណ៍​វប្បធម៌​ តំបន់​ទេសចរណ៍​ធម្មជាតិ និង តំបន់​ទេសចរណ៍​​កែច្នៃ មួយ​ចំនួន​ដែល​អាច​ទាក់ទាញ​ភ្ញៀវ​ក្នុង​ស្រុក ភ្ញៀវ​មក​ពី​ខេត្ត​ក្រុង​ផ្សេងៗ​ និង ភ្ញៀវ​​ទេសចរណ៍​បរទេស ។</p>
-            <p class="text-description-header">ខាង​ក្រោម​នេះ​គឺ​ជា​តំបន់​ទេសចរណ៍ដែល​​​ទេសចរ​​ជាតិ​ និង ​អន្តរជាតិ​​អាច​មក​​​ទស្សនា​​កំសាន្តបាន​ ៖។</p>
-            <p class="text-description">-ចុងប៉ម <br> -ភ្នំឈើកាច់ <br> -បឹងស្នេហ៍ <br> -ប្រាសាទចុងស្រុក <br> -រមនីយ៍ដ្ឋានជាច្រើន... ។ </p>
+            <p class="text-description">រាជធានីភ្នំពេញ (បានក្លាយមកពីពាក្យ “ភ្នំដូនពេញ” ឬ “ភ្នំរបស់លោកយាយពេញ”) គឺជារាជធានី និងជាបេះដូងនៃប្រទេសកម្ពុជា។ រាជធានីភ្នំពេញ បានក្លាយមកជារាជធានីដ៏សំខាន់ជាងគេ តាំងពី សម័យអាណានិគមបារាំង និងបានប្រែក្លាយមកជាមជ្ឈមណ្ឌលសេដ្ឋកិច្ចជាតិដ៏សំខាន់ស្ទើរគ្រប់ វិស័យដូចជាឧស្សាហកម្ម ពាណិជ្ជកម្ម វប្បធម៌ ទេសចរណ៍ និងធនធានប្រវត្តិសាស្រ្តក្រោយឆ្នាំ 1979 ។
+              នៅពេលរាជធានីភ្នំពេញ ត្រូវបានគេស្គាល់ថាជា “គជ់នៅតំបន់អាស៊ី” វាត្រូវបានគេចាត់ទុកថា ជារាជធានីមួយ ដ៏ស្រស់ស្អាតបំផុតដែលបានស្ថាបនាឡើងដោយបារាំង ក្នុងតំបន់ឥណ្ឌូចិន នាឆ្នាំ 1920 ។ រាជធានីភ្នំពេញភ្ជាប់ទៅកាន់ខេត្តសៀមរាប និងខេត្តព្រះសីហនុ គឺជាទិសដៅទេសចរណ៍ក្នុង ស្រុក និងអន្តរជាតិដ៏គួរឲ្យកត់សម្គាល់ មួយសម្រាប់ប្រទេសកម្ពុជា។ រាជធានីនេះត្រូវបានរកឃើញក្នុងឆ្នាំ 1434 ដែលជាទីចំណាប់អារម្មណ៍ផ្នែកប្រវត្តិសាស្រ្តយ៉ាងខ្លាំង។ ព្រះបរមរាជវាំង គឺជាស្ថាបត្យកម្មមួយក្នុងចំណោមស្ថាបត្យកម្មជា ច្រើនដែលបានបន្សល់ទុកតាំងពីសម័យបារាំង។
+              រាជធានីភ្នំពេញ មានទីតាំងនៅត្រង់ចំណុចប្រសព្វនៃទន្លេមេគង្គ ទន្លេសាប និងទន្លេបាសាក់ មាន អត្រាប្រជាជនជាង 2 លាននាក់ នៃប្រជាជនសរុបជាង 14 លាននាក់។ រាជធានីភ្នំពេញ គឺជា រាជធានីដែលមានប្រជាជនច្រើនបំផុត ក្នុងព្រះរាជាណាចក្រកម្ពុជា។ ជាពិសេស វាជាឃ្លាំងបណ្តុំនូវ វប្បធម៌ ពាណិជ្ជកម្ម និងនយោបាយរបស់ប្រទេសផងដែរ។
+              រាជធានីភ្នំពេញមានរមណីយដ្ឋានទាក់ទាញជាច្រើនសម្រាប់ភ្ញៀវទេសចរថ្មី ក៏ដូចជាភ្ញៀវទេសចរដែលអញ្ជើញមកទស្សនាម្តងទៀត។ សូមអញ្ជើញមកទស្សនាកន្លែងទាក់ទាញដ៏អស្ចារ្យជាច្រើនដែលអ្នកមិនគួររំលងពេលមកទស្សនារាជធានីភ្នំពេញ!
+              </p>
+            <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
+            <p class="text-description-header">ខាង​ក្រោម​នេះ​គឺ​ជា​តំបន់​ទេសចរណ៍ដែលភ្ញៀវ​​​ទេសចរ​​ជាតិ​ និង ​អន្តរជាតិ​​អាច​មក​​​ទស្សនា​​កំសាន្តបាន​៖</p>
+            <p class="text-description">-វត្តភ្នំ <br> -ក្លឹបកំសាន្ដ <br> -ផ្សារទំនើប <br> -រមនីយ៍ដ្ឋានជាច្រើន... ។ </p>
             <p class="text-title-readmore">ទីកន្លែងកំសាន្ដ</p>
-            <p class="text-description"> វត្តភ្នំ</p>
+            <p class="text-title-readmore">វត្តភ្នំ</p>
             <!-- Bootstrap Slide View -->
             <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -122,7 +122,7 @@
                  <img src="images/កន្លែងកំសាន្ដ/ភ្នំពេញ/វត្តភ្នំ3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ផ្ទះ​កាហ្វេ​វប្បធម៌ បាន​តាំង​វត្ថុ​បង្ហាញ​ពី​វប្បធម៌ ក្នុង​គោលដៅ​រួមចំណែក​ផ្សព្វផ្សាយ​ពី​វប្បធម៌​ខ្មែរ​។ វត្ថុ​បុរាណ​ដែលមាន​ក្នុងផ្ទះ​កាហ្វេ​វប្បធម៌​នេះ មាន​អាយុកាល​ចាប់ពី​ជាង​១០០​ឆ្នាំ រហូតដល់​សម័យ​បច្ចុប្បន្ន​។ ​</p>
+              <p class="text-description">នាឆ្នាំ១៣៧២ មានដូនចាស់ម្នាក់ឈ្មោះ "យាយពេញ" ជាអ្នកមានភោគសម្បត្តិបរិបូរណ៍ មានលំនៅក្បែរច្រាំងទន្លេប្រសព្វមុខ (ទន្លេបួនមុខ) ។ ផ្ទះរបស់ដូនពេញ សង់នៅលើទួលខាងកើតភ្នំតូចមួយនោះ ថ្ងៃមួយមានភ្លៀងធ្លាក់មកដល់ ដូនពេញបានចុះទៅកំពង់ទឹក ដើម្បីងូតទឹក ស្រាប់តែឃើញដើមគគីរធំមួយ អណ្តែតមកក្បែរច្រាំងទើរនៅកំពង់ទឹករបស់គាត់ លុះដូនពេញឃើញដូច្នេះ ក្រលេកឃើញដូចជាមានរបស់អ្វីនៅក្នុងរុន្ធដើមគគីរនោះ ដូនពេញ ក៏យកកំណាត់ឈើ ទៅកោសកៀរសំអាតភក់ចេញ គាត់ក៏បានប្រទះឃើញក្នុងប្រហោងឈើគគីរ មានព្រះបដិមា ៤ អង្គ ធ្វើអំពី សំរិទ្ធ និង លង្ហិន និង មួយអង្គទៀតធ្វើអំពីថ្មកែវ ដែលបដិមានោះ ទ្រង់ឈរព្រះហស្ថម្ខាងទ្រង់កាន់ដំបង និង កងចក្រ ព្រះហស្ថម្ខាងទៀត ទ្រង់កាន់ខ្យងស័ង្ខ និងផ្កាឈូក ព្រះកេសាបួង ក្នុងទម្រង់ជាព្រះវិស្ណុះ ។ ដូនពេញ ក៏ទៅប្រាប់អ្នកភូមិ ឲ្យទៅជួយទាញយកដើមគគីរនោះ និងទទួលរតនា ព្រះបដិមាបួនអង្គនោះយកមកទុកជាទីគោរពបូជា។ ក្រោយមក លោកយាយ "ដូនពេញ" ក៏បានចាត់ឲ្យអ្នកភូមិសាងសង់អាស្រមមួយនៅលើកំពូលភ្នំតូចនេះ ដើម្បីដាក់ព្រះបដិមាទាំងបួនអង្គ ដម្កល់ជាទីសក្ការៈបូជា លោកយាយក៏បាននិមន្តព្រះសង្ឃមកផងដែរ ដើម្បីសូត្រធម៌រតនា អៈភិសេក បដិមាទាំងបួនអង្គនោះ និងបានឲ្យមានព្រះសង្ឃគង់ចាំផង ទើបកើតមាននៅការដាក់ឈ្មោះអាស្រមនោះថា "វត្តភ្នំ" ដែលយើងស្គាល់ច្បាស់មកដល់សព្វថ្ងៃនេះ។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -134,7 +134,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ក្លឹបកំសាន្ដ​</p>
+            <p class="text-title-readmore">ក្លឹបកំសាន្ដ​</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -151,7 +151,7 @@
                  <img src="images/កន្លែងកំសាន្ដ/ភ្នំពេញ/ក្លឹបកំសាន្ថ3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប៉េងប៉ោង​អេលីយ៉ូម​ដែល​ចង​ភ្ជាប់​នៅ​ចម្ងាយ ៨០០ ម៉ែត្រ​ពី​ប្រាសាទ​អង្គរវត្ត។ ប៉េងប៉ោងអេលីយ៉ូមត្រូវបានភ្ជាប់ជាមួយនឹងខ្សែមេកានិចទៅនឹងដី ហើយឡើងដល់កម្ពស់ប្រហែល 120 ម៉ែត្រ (394 ហ្វីត) សម្រាប់ការជិះរយៈពេល 10 នាទី ហើយអាចផ្ទុកអ្នកដំណើរបានរហូតដល់ 20 នាក់។ ចាប់ពីថ្ងៃរះដល់ថ្ងៃលិច រីករាយនឹងទិដ្ឋភាពពីលើអាកាសដ៏អស្ចារ្យនៃប្រាសាទអង្គរវត្ត ភ្នំបាខែង និងបារាយណ៍ខាងលិច។ អ្នកក៏អាចមើលបឹងទន្លេសាប និងភ្នំក្រោមផងដែរ។ ថតរូបដ៏អស្ចារ្យ និងនាំយកការចងចាំមកផ្ទះដែលនៅស្ថិតស្ថេរអស់មួយជីវិត។​</p>
+              <p class="text-description">នៅរាជធាភ្នំពេញ ជាក្រុងមួយដែលមានភាពសម្បូរបែបស៊ីវីល័យដែលបូរទៅដោយភ្ញៀវជានិងអន្តរជាតិចូលមកដើម្បីទទួលបានការសិក្សានិងការងារផ្សេងៗ។ មិនត្រឹមតែប៉ុណ្ណោះ នៅពេលដែលក្រុមមនុស្សមួយក្រុមតែងរងសម្ពាធពីការសិក្សា និងការងាររបស់ពួកគេ ក្រុមមនុស្សទាំងនោះដើររកវិធីដោះស្រាយបញ្ហារបស់ពួកគេដោយបបួលគ្នាចូលក្លឹបកំសាន្ដដើម្បីជាការរំសាយអារម្មណ៍ និងភាពស្មុគស្មាញមួយពេល។ ដោយពួកគេអង្គុយស្ដាប់ភ្លេង និងលើកកែវជល់ជាមួយបរិយាកាលមួយដ៏ល្អមួយ ធ្វើឲ្យអារម្មណ៍លន្លង់លន្លោចនឹកដល់កាលវ័យកុមារ។ ពេលខ្លះពួកគេនាំគ្នានិយាយពីបញ្ហាជីវិតដែលត្រូវដោះស្រាយពេលខាងមុខនិងពីរបៀបដែលត្រូវធ្វើដំណើរដោយរបៀបណា។​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -163,7 +163,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ផ្សារទំនើប</p>
+            <p class="text-title-readmore">ផ្សារទំនើប</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -180,7 +180,7 @@
                  <img src="images/កន្លែងកំសាន្ដ/ភ្នំពេញ/ផ្សារទំនើប4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទអង្គរវត្ត ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។ ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។ ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២ ដែលជាស្នាដៃដ៏ធំអស្ចារ្យ និងមានឈ្មោះល្បីល្បាញរន្ទឺសុះសាយទៅគ្រប់ទិសទីលើពិភពលោក។ ​</p>
+              <p class="text-description">នៅឆ្នាំ២០១៨នេះ អ្នកជំនាញអចលនទ្រព្យបានហៅថា “ជាឆ្នាំនៃផ្សារទំនើប” ដោយសារឆ្នាំនេះផ្សារទំនើបតូច ធំចំនួន១២ នឹងបើកដំណើរការជាបន្តបន្ទាប់។ នេះបើយោងតាមការចុះផ្សាយរបស់កាសែតរស្មីកម្ពុជា នាព្រឹកថ្ងៃទី៤ ខែឧសភានេះ។  វិស័យផ្សារទំនើបបានរីកចម្រើនយ៉ាងខ្លាំងនៅកម្ពុជា គិតមកទល់ពេលនេះ ផ្សារទំនើបបានរីកដុះដាល ស្ទើរគ្រប់បណ្តាខេត្តនិងក្រុង នៅកម្ពុជាដោយមានប្រភេទផ្សេងៗគ្នា។ប្រភេទផ្សារទំនើបដែលពេញនិយមនៅកម្ពុជា យើងចែកចេញជា៣ប្រភេទមានដូចជា៖ ផ្សារទំនើបខ្នាតធំ (shopping malls)，ផ្សារទំនើបសហគមន៍ (community malls)， ផ្សារទំនើប Retail Podium។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -192,7 +192,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> រមណីយដ្ឋាន</p>
+            <p class="text-title-readmore"> រមណីយដ្ឋាន</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators5" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -209,7 +209,7 @@
                  <img src="images/កន្លែងកំសាន្ដ/ភ្នំពេញ/រមណីយ៍ដ្ឋាន4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទបាគងគឺជាឈ្មោះថ្មី ដែលត្រូវបានហៅនៅសម័យកណ្តាល។ ប្រាសាទនេះផ្សំពីពាក្យ ប្រាសាទ+បា+គង។ ប្រាសាទ មានន័យថាទីកន្លែងអាទិទេពគង់នៅ។ បា មានន័យ ថាអ្នកគ្រប់គ្រងលោក អ្នកថែរក្សាលោក។ រីឯពាក្យ គង មានន័យថាគឺជាវត្ថុសម្រាប់បន្លឺសម្លេងឱ្យលាន់លឺរំពងខ្លាំង ហើយត្រូវបានអ្នកមានជំនឿលើអាទិទេព ប្រើប្រាស់ដើម្បីបង្កើតជាសូរសម្លេងដាស់លាន់លឺដល់ពួកអាទិទេពទាំងអស់។ តាមសិលាចារឹកនៃប្រាសាទនេះមានឈ្មោះដើមថា ឥន្ទ្រេស្វរៈ[២]។ ​</p>
+              <p class="text-description">កន្លងទៅថ្មីៗនេះ ក្នុងតំបន់រមណីយ៍ដ្ឋាន ភូមិផ្កាត្រកួន លោក ឌិន សុមេធារិទ្ធ បានបរិយាយ ដោយក្តីមោទនភាព នូវរាល់សមិទ្ធផលស្នាដៃ ដែលលោកបានបង្កើតឡើង ហើយដែលបាននិងកំពុងបន្តអនុវត្ត នាពេលបច្ចុប្បន្ននេះ រួមមានៈ សំណង់ទីផ្សារ ធម្មសាលាបែបសាសនា សាលប្រជុំ ចំណតយានយន្ត …។ជាមួយនឹងការបែងចែកពុះដីឡូត៍ លក់ជូនដល់អតិថិជន ជាបន្តបន្ទាប់ លោកមេភូមិ ក៏បានចង្អុលបង្ហាញ នូវសំណង់លំនៅដ្ឋាន ប្រភេទភូមិគ្រឹះ និងផ្ទះបែបសម័យទំនើប ដែលបានស្ថាបនា រួចរាល់ និងមួយចំនួនទៀត បាននិងកំពុងមមាញឹក ក្នុងការស្ថាបនា នៅតាមដីឡូត៍ ដែលប្រកបដោយ ផ្លូវក្រាលក្រួស និងបេតុងខ្វាត់ខ្វែង។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators5" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
