--- a/ស្វាយរៀង.html
+++ b/ស្វាយរៀង.html
@@ -91,38 +91,36 @@
     <div class="row"> <!--Display flix-->
         <div class="description-1">
           <div class="img-content-wrap">
-            <img class="img-content-post" src="images/Cambodia/ព្រៃវែង.jpg">
+            <img class="img-content-post" src="images/Cambodia/ស្វាយរៀង.jpg">
             <div class="overlay">
               <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តស្វាយរៀង</p>
             </div>
           </div>
-            <p class="text-description">ខេត្តព្រៃវែង ជាខេត្តដែលមានទីតាំងស្ថិតនៅភាគខាងកើតរាជធានីភ្នំពេញ មានព្រំប្រទល់ខាងកើតជាប់ខេត្តស្វាយរៀង និងវៀតណាម ខាងជើងជាប់ខេត្តកំពង់ចាម និងខេត្តត្បូងឃ្មុំ ខាងលិចជាប់ខេត្តកណ្តាល និងខាងត្បូងជាប់វៀតណាម។</p>
-            <p class="text-description">ខេត្តព្រៃវែង មានច្រកអន្តរជាតិចំនួន ៣ កន្លែងគឺ ទី១​ ច្រកអន្តរជាតិម៉ឺនជ័យ (ស្រុកកំចាយមារ) ទី២​ ច្រកអន្តរជាតិបន្ទាយចក្រី (ស្រុកព្រះស្តេច) ទី៣ ច្រកអន្តរជាតិកោះរការ (ស្រុកពាមជរ) នឹងមានផ្ទៃដី​សរុបគឺ ប្រហែល ៤៨៨៣ គម² ដែលស្មើទៅនិង ២,៧០% នៃផ្ទៃដីសរុប​នៃ​</p>
-            <p class="text-description">ប្រទេស​កម្ពុជា (១៨១ ០៣៥ គម²), ដែល​ក្នុងនោះ ៤៤៥,១៨ គម² ឬ ៩,១២% ជាផ្ទៃដី ដែលប្រជាជន បានតាំងទី​លំនៅ, ៣១០០ គម² ឬ ៦៣,៤៩% ជាដី សំរាប់កសិកម្ម, ១៩៤,៦១ គម² ឬ ៣,៩៩% ជាផ្ទៃនៃ​តំបន់ ព្រៃឈើ, ១០៨២,៨៦ គម² ឬ ២២,១៨% ជា​ដី។ </p>
-            <p class="text-description">សាធារណៈ, ហេដ្ឋារចនាសម្ព័ន្ធ និង ធារាសាស្រ្ត, និង នៅសល់ ៦០,៣៥ គម² ឬ១,២៤% ជា ដី មិនត្រូវបានប្រើប្រាស់ ។</p>
+            <p class="text-description">ខេត្តស្វាយរៀងប្រហែលជាខេត្តមួយក្នុងចំណោមខេត្តតូចបំផុតរបស់ប្រទេសកម្ពុជា ប៉ុន្តែមានផ្លូវជាតិដែលពេញទៅដោយចរាចរណ៍មមាញឹកបំផុតកាត់តាមទីប្រជុំជន។ ផ្លូវជាតិលេខ១ភ្ជាប់ពីភ្នំពេញទៅទីក្រុងហូជីមិញរបស់ប្រទេសវៀតណាមបន្ទាប់ពីឆ្លងទន្លេមេគង្គតាមរយៈស្រឡាងអ្នកលឿង។   ទីនេះជាច្រកចូលអន្តរជាតិតាមច្រកបាវិតទៅកាន់ប្រទេសវៀតណាម។ នេះជាក្រុងមួយដ៏រីកចម្រើនដែលបានទទួលផលពីចរាចរណ៍ពាណិជ្ជកម្មតាមព្រំដែន។ ទីនោះមានទីផ្សារដ៏មមាញឹក ហើយប្រជាជនមានភាពរស់រាយរាក់ទាក់។ ខេត្តនេះមានជម្រើសសម្រាប់ស្នាក់អាស្រ័យពិសេសៗជាច្រើន។ នៅជិតទន្លេវ៉ៃកូ ក៏មានវាលភក់ដ៏ធំនិងមានទេសភាពស្អាតផ្ដល់ជាបរិស្ថានយ៉ាងល្អសម្រាប់ការថតរូប។ នៅមិនឆ្ងាយប៉ុន្មានពីទីក្រុង មានស្ពានមួយឆ្លងទន្លេវ៉ៃកូដែលផ្ដល់ជូនជាចំណងដៃពី  សម្ដេចនាយករដ្ឋមន្រ្តី     ហ៊ុន      សែន ។ ភាពស្រស់ស្អាតនៃខេត្តនេះមិនមែនដោយសារតែភាពងាយស្រួលរបស់ខេត្តនេះប៉ុណ្ណោះទេប៉ុន្តែ ក៏មានធម្មជាតិ និងតំបន់បឹងព្រៃបាសាក់នៅក្រៅក្រុង និងប្រាសាទដែលគួរឈប់សម្រាកដើម្បីទស្សនាផងដែរ។ មានប្រាសាទដែលគេស្គាល់តិចតួចណាស់នៅទីនេះ ក៏ដូចជានៅខេត្តស្វាយរៀងដែរ មានដូចជាប្រាសាទជាហៅ និងប្រាសាទបាសាក់។ 
+              ខេត្តស្វាយរៀងមិនស្ថិតនៅក្នុងផែនទីទេសចរណ៍ទេ ប៉ុន្តែពិសេសបំផុតសម្រាប់អ្នកដែលចង់នៅស្គាល់ជីវិតជនបទនៃប្រទេសកម្ពុជា។“ក្រុងស្វាយរៀង”  ស្ថិតនៅក្នុងខេត្តស្វាយរៀង ដែលមានព្រំប្រទល់  ខាងជើងទល់នឹងស្រុករំដួល និងស្រុកស្វាយជ្រុំ  ខាងត្បូងទល់នឹងស្រុកកំពង់រោទិ៍ និងស្រុកស្វាយជ្រុំ  ខាងកើតទល់នឹងស្រុកស្វាយជ្រុំ  ខាងលិចទល់នឹងស្រុកស្វាយទាប។ ហើយក្រុងស្វាយរៀងមានក្រឡាផ្ទៃដីសរុប៨២,៧៤ គម២។ ដែលមាន ០៧ សង្កាត់ រួមមាន សង្កាត់ស្វាយរៀង, សង្កាត់ចេក, សង្កាត់គយត្របែក, សង្កាត់សង្ឃ័រ, សង្កាត់ស្វាយតឿ, សង្កាត់ព្រៃឆ្លាក់, និងសង្កាត់ពោធិ៍តាហា។ ចំណែកឯមានប្រជាជនមានចំនួន ៤៦.៨២២ នាក់ ត្រូវជា ១០.៤២៤ គ្រួសារ ។  ប្រជាជនភាគច្រើនប្រកបរបរជា កសិកម្ម (៣៩,០៨%) សិប្បកម្ម (១,៣៧%) សេវាកម្ម (១០,៤៣%) ជាមន្ត្រីរាជការ និងបុគ្គលិកឯកជន (២៤,៨%) និងមុខរបរបន្ទាប់បន្សំផ្សេងៗ ១៦,៣៥%។
+              </p>
             <p class="text-title-readmore">​ខេត្តស្វាយរៀង</p>
-            <p class="text-description-header">ខេត្ត​ព្រៃវែង​មាន​​តំបន់​​​ទេសចរណ៍​វប្បធម៌​ តំបន់​ទេសចរណ៍​ធម្មជាតិ និង តំបន់​ទេសចរណ៍​​កែច្នៃ មួយ​ចំនួន​ដែល​អាច​ទាក់ទាញ​ភ្ញៀវ​ក្នុង​ស្រុក ភ្ញៀវ​មក​ពី​ខេត្ត​ក្រុង​ផ្សេងៗ​ និង ភ្ញៀវ​​ទេសចរណ៍​បរទេស ។</p>
-            <p class="text-description-header">ខាង​ក្រោម​នេះ​គឺ​ជា​តំបន់​ទេសចរណ៍ដែល​​​ទេសចរ​​ជាតិ​ និង ​អន្តរជាតិ​​អាច​មក​​​ទស្សនា​​កំសាន្តបាន​ ៖។</p>
-            <p class="text-description">-ចុងប៉ម <br> -ភ្នំឈើកាច់ <br> -បឹងស្នេហ៍ <br> -ប្រាសាទចុងស្រុក <br> -រមនីយ៍ដ្ឋានជាច្រើន... ។ </p>
+           <p class="text-description-header">ខាង​ក្រោម​នេះ​គឺ​ជា​តំបន់​ទេសចរណ៍ដែល​​​ទេសចរ​​ជាតិ​ និង ​អន្តរជាតិ​​អាច​មក​​​ទស្សនា​​កំសាន្តបាន​ ៖</p>
+            <p class="text-description">-រមណីយដ្ឋានប្រាសាទព្រៃបាសាក់ <br> -ប្រាសាទជីហោ​ <br> -រមណីយ៍ដ្ឋានធម្មជាតិព្រៃគគីរ <br> -រមណីយ៍ដ្ឋានទឹកវិល <br> -រមនីយ៍ដ្ឋានជាច្រើន... ។ </p>
             <p class="text-title-readmore">ទីកន្លែងកំសាន្ដ</p>
-            <p class="text-description"> រមណីយដ្ឋានប្រាសាទព្រៃបាសាក់</p>
+            <p class="text-title-readmore"> រមណីយដ្ឋានប្រាសាទព្រៃបាសាក់</p>
             <!-- Bootstrap Slide View -->
             <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុង​ប៉ម1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/ប្រាសាទព្រៃបាសាក់.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុងប៉ម2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/ប្រាសាទព្រៃបាសាក់1.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុងប៉ម3.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/ប្រាសាទព្រៃបាសាក់2.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ចុងប៉ម4.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/ប្រាសាទព្រៃបាសាក់3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ផ្ទះ​កាហ្វេ​វប្បធម៌ បាន​តាំង​វត្ថុ​បង្ហាញ​ពី​វប្បធម៌ ក្នុង​គោលដៅ​រួមចំណែក​ផ្សព្វផ្សាយ​ពី​វប្បធម៌​ខ្មែរ​។ វត្ថុ​បុរាណ​ដែលមាន​ក្នុងផ្ទះ​កាហ្វេ​វប្បធម៌​នេះ មាន​អាយុកាល​ចាប់ពី​ជាង​១០០​ឆ្នាំ រហូតដល់​សម័យ​បច្ចុប្បន្ន​។ ​</p>
+              <p class="text-description">ព្រៃបាសាក់ ឬព្រៃប្រាសាទ មានទីតាំងស្ថិតនៅក្នុងភូមិបាសាក់ ឃុំបាសាក់ ស្រុកស្វាយជ្រំ ខេត្តស្វាយរៀង និងមានចម្ងាយ ៨.៥គីឡូម៉ែត្រ ពីទីរួមខេត្តស្វាយរៀង។ ភ្ញៀវទេសចរអាចធ្វើដំណើរដោយរថយន្តតាមផ្លូវបេតុង ប៉ុន្តែនៅរដូវវស្សាក៏អាចធ្វើដំណើរតាមផ្លូវទឹកនៃដងទន្លេវ៉ៃគោ ក្នុងចម្ងាយ ត្រឹមតែ៥គីឡូម៉ែត្រប៉ុណ្ណោះ។ ព្រៃបាសាក់មានផ្ទៃដីសរុប ៩ហិកតា ២៤អា និង៩៨សង់ទីអា មានព្រំប្រទល់ខាងជើង និងខាងកើតជាប់នឹងទន្លេវ៉ៃគោ ខាងត្បូង និងខាង លិចជាប់នឹងភូមិអ្នកស្រុក។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -134,24 +132,24 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description">ប្រាសាទជីហោ​</p>
+            <p class="text-title-readmore">ប្រាសាទជីហោ​</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/ប្រាសាទជីហោ.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/ប្រាសាទជីហោ1.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/ប្រាសាទជីហោក2.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ភ្នំឈើកាច់3.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/ប្រាសាទជីហោ3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប៉េងប៉ោង​អេលីយ៉ូម​ដែល​ចង​ភ្ជាប់​នៅ​ចម្ងាយ ៨០០ ម៉ែត្រ​ពី​ប្រាសាទ​អង្គរវត្ត។ ប៉េងប៉ោងអេលីយ៉ូមត្រូវបានភ្ជាប់ជាមួយនឹងខ្សែមេកានិចទៅនឹងដី ហើយឡើងដល់កម្ពស់ប្រហែល 120 ម៉ែត្រ (394 ហ្វីត) សម្រាប់ការជិះរយៈពេល 10 នាទី ហើយអាចផ្ទុកអ្នកដំណើរបានរហូតដល់ 20 នាក់។ ចាប់ពីថ្ងៃរះដល់ថ្ងៃលិច រីករាយនឹងទិដ្ឋភាពពីលើអាកាសដ៏អស្ចារ្យនៃប្រាសាទអង្គរវត្ត ភ្នំបាខែង និងបារាយណ៍ខាងលិច។ អ្នកក៏អាចមើលបឹងទន្លេសាប និងភ្នំក្រោមផងដែរ។ ថតរូបដ៏អស្ចារ្យ និងនាំយកការចងចាំមកផ្ទះដែលនៅស្ថិតស្ថេរអស់មួយជីវិត។​</p>
+              <p class="text-description">ប្រសាទជីហោ គឺជាប្រាសាទមួយដែលមានវ័យចំណាស់ជាងគេក្នុងខេត្តស្វាយរៀង ស្ថិតនៅតំបន់ឦសាននៃទីរួមខេត្តស្វាយរៀង ចម្ងាយប្រមាណ ៥៨គីឡូម៉ែត្រ។ ប្រាសាទនេះ កសាងឡើងក្នុងកំឡុងសតវត្សទី៦ (លំនាំរចនាបទសំបូរព្រៃគុហ៍) សង់នៅលើទីទួលមួយកន្លែងមានកម្ពស់ ៣ម៉ែត្រ ទំហំ ៥០ម៉ែត្រ បួនជ្រុង ប្របតាមមាត់ទន្លេជាប់ព្រំប្រទល់ដែន កម្ពុជា-វៀតណាម ។ រីឯតួប្រាសាទធ្វើអំពីឥដ្ឋ និងថ្មបាយក្រៀមពីទិសខាងកើត ក្រៅពីនេះមានសុទ្ធតែទ្វារបង្អួចបញ្ឆោត បិទជាប់ជញ្ជាំង។ ចំពោះទ្វារ មេបង្អួចក្បាច់ផ្ងា និងក្បាច់ផ្សេងៗទៀតធ្វើអំពីដីដុតទាំងអស់។​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -163,24 +161,24 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> រមណីយដ្ឋានធម្មជាតិព្រៃគគីរ</p>
+            <p class="text-title-readmore"> រមណីយដ្ឋានធម្មជាតិព្រៃគគីរ</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/រមណីយ៍ដ្ឋានធម្មជាតិព្រៃគគីរ.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/រមណីយ៍ដ្ឋានធម្មជាតិព្រៃគគីរ1.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/រមណីយ៍ដ្ឋានធម្មជាតិព្រៃគគីរ2.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/បឹងស្នេហ៍4.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/រមណីយ៍ដ្ឋានធម្មជាតិព្រៃគគីរ3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទអង្គរវត្ត ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។ ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។ ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២ ដែលជាស្នាដៃដ៏ធំអស្ចារ្យ និងមានឈ្មោះល្បីល្បាញរន្ទឺសុះសាយទៅគ្រប់ទិសទីលើពិភពលោក។ ​</p>
+              <p class="text-description">ព្រៃគគីរ គឺជារមនីយដ្ឋានធម្មជាតិដែលសម្បូរទៅដោយដើមគគីរជាច្រើនដើមដុះព័ទ្ធជុំវិញ មានទីតាំងស្ថិតនៅក្នុងបរិវេណ សហគមន៍ ព្រៃឈើចម្ការកូនគគីរ ក្នុងភូមិត្រពាំងផ្លុង សង្កាត់បាទី ក្រុងបាវិត ខេត្តស្វាយរៀង និងចម្ងាយ ៣២គីឡូម៉េត្រពីទីរួមខេត្តស្វាយរៀង។ ភ្ញៀវទេសចរអាចធ្វើដំណើរ ទៅទីនោះបានដោយចំណាយពេលត្រឹមតែ ៣០នាទីប៉ុណ្ណោះ។ នៅទីនោះមានស្រះទឹកធំមួយនៅចំកណ្ដាលព្រៃ មានរុក្ខជាតិតូចធំដុះពេញព្រៃមានដូចជា ដើមគគីរ ដើមស្មាច់ និងមានការរៀបចំសង់ជាស្ពានសម្រាប់ដើរទស្សនាព្រៃអាកាសស្យា និងសួនផ្កាចម្រុះពណ៌លម្អយ៉ាងស្រស់បំព្រង។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -192,24 +190,24 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> រមណីយដ្ឋានទឹកវិល</p>
+            <p class="text-title-readmore">រមណីយដ្ឋានទឹកវិល</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators5" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/រមណីយ៍ដ្ឋានទឹកវិល.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/រមណីយ៍ដ្ឋានទឹកវិល1.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/រមណីយ៍ដ្ឋានទឹកវិល2.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/កន្លែងកំសាន្ដ/ព្រៃវែង/ប្រសាទចុងស្រុក3.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/កន្លែងកំសាន្ដ/ស្វាយរៀង/រមណីយ៍ដ្ឋានទឹកវិល3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">ប្រាសាទបាគងគឺជាឈ្មោះថ្មី ដែលត្រូវបានហៅនៅសម័យកណ្តាល។ ប្រាសាទនេះផ្សំពីពាក្យ ប្រាសាទ+បា+គង។ ប្រាសាទ មានន័យថាទីកន្លែងអាទិទេពគង់នៅ។ បា មានន័យ ថាអ្នកគ្រប់គ្រងលោក អ្នកថែរក្សាលោក។ រីឯពាក្យ គង មានន័យថាគឺជាវត្ថុសម្រាប់បន្លឺសម្លេងឱ្យលាន់លឺរំពងខ្លាំង ហើយត្រូវបានអ្នកមានជំនឿលើអាទិទេព ប្រើប្រាស់ដើម្បីបង្កើតជាសូរសម្លេងដាស់លាន់លឺដល់ពួកអាទិទេពទាំងអស់។ តាមសិលាចារឹកនៃប្រាសាទនេះមានឈ្មោះដើមថា ឥន្ទ្រេស្វរៈ[២]។ ​</p>
+              <p class="text-description">ទឹកវិល គឺជារមណីយដ្ឋានធម្មជាតិស្ថិតនៅក្នុងភូមិទឹកវិល ឃុំអំពិល ស្រុករមាសហែក ខេត្តស្វាយរៀង មានចម្ងាយប្រមាណ ៤២គីឡូ ម៉ែត្រ ពីទីរួមខេត្តស្វាយរៀង។ ទឹកវិលជាទំនប់កម្សាន្តបែបលក្ខណៈគ្រួសារ ដែលមានបឹងមួយដ៏ធំដែលអាចឲ្យភ្ញៀវអញ្ជើញមកជិះទូកលេង និងគយគន់មើលទេសភាព ដ៏ខៀវស្រងាត់ ជុំវិញបឹងនេះ និងមានខ្ចុះសម្រាប់ភ្លៀវសម្រាក់ពិសារអាហារដ៏មានឱជារសឈ្ងុយឆ្ងាញ់បែបធម្មជាតិ។ ពីមួយថ្ងៃទៅមួយថ្ងៃរមណីដ្ឋាននោះ ទទួលភ្ញៀវ ទេសចរណ៍ អញ្ជើញមកកម្សាន្តច្រើនគួរសម។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators5" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
